@@ -3,7 +3,6 @@ package org.jabref.gui.maintable;
 import java.io.File;
 import java.io.IOException;
 import java.nio.file.Path;
-import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
 import java.util.Optional;
@@ -28,8 +27,8 @@ import javafx.scene.input.TransferMode;
 import org.jabref.gui.ClipBoardManager;
 import org.jabref.gui.DialogService;
 import org.jabref.gui.DragAndDropDataFormats;
-import org.jabref.gui.Globals;
 import org.jabref.gui.LibraryTab;
+import org.jabref.gui.LibraryTabContainer;
 import org.jabref.gui.StateManager;
 import org.jabref.gui.actions.StandardActions;
 import org.jabref.gui.edit.EditAction;
@@ -40,18 +39,23 @@ import org.jabref.gui.maintable.columns.LibraryColumn;
 import org.jabref.gui.maintable.columns.MainTableColumn;
 import org.jabref.gui.util.ControlHelper;
 import org.jabref.gui.util.CustomLocalDragboard;
-import org.jabref.gui.util.DefaultTaskExecutor;
+import org.jabref.gui.util.TaskExecutor;
+import org.jabref.gui.util.UiTaskExecutor;
 import org.jabref.gui.util.ViewModelTableRowFactory;
 import org.jabref.logic.importer.FetcherClientException;
 import org.jabref.logic.importer.FetcherException;
 import org.jabref.logic.importer.FetcherServerException;
-import org.jabref.logic.importer.ImportFormatReader;
+import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.model.database.BibDatabaseContext;
 import org.jabref.model.database.event.EntriesAddedEvent;
 import org.jabref.model.entry.BibEntry;
+import org.jabref.model.entry.BibEntryTypesManager;
+import org.jabref.model.entry.BibtexString;
+import org.jabref.model.util.FileUpdateMonitor;
 import org.jabref.preferences.PreferencesService;
 
+import com.airhacks.afterburner.injection.Injector;
 import com.google.common.eventbus.Subscribe;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -69,18 +73,24 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
     private final ImportHandler importHandler;
     private final CustomLocalDragboard localDragboard;
     private final ClipBoardManager clipBoardManager;
+    private final BibEntryTypesManager entryTypesManager;
+    private final TaskExecutor taskExecutor;
+    private final UndoManager undoManager;
     private long lastKeyPressTime;
     private String columnSearchTerm;
 
     public MainTable(MainTableDataModel model,
                      LibraryTab libraryTab,
+                     LibraryTabContainer tabContainer,
                      BibDatabaseContext database,
                      PreferencesService preferencesService,
                      DialogService dialogService,
                      StateManager stateManager,
                      KeyBindingRepository keyBindingRepository,
                      ClipBoardManager clipBoardManager,
-                     ImportFormatReader importFormatReader) {
+                     BibEntryTypesManager entryTypesManager,
+                     TaskExecutor taskExecutor,
+                     FileUpdateMonitor fileUpdateMonitor) {
         super();
 
         this.libraryTab = libraryTab;
@@ -89,17 +99,19 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         this.database = Objects.requireNonNull(database);
         this.model = model;
         this.clipBoardManager = clipBoardManager;
-        UndoManager undoManager = libraryTab.getUndoManager();
+        this.entryTypesManager = entryTypesManager;
+        this.taskExecutor = taskExecutor;
+        this.undoManager = libraryTab.getUndoManager();
         MainTablePreferences mainTablePreferences = preferencesService.getMainTablePreferences();
 
         importHandler = new ImportHandler(
                 database,
                 preferencesService,
-                Globals.getFileUpdateMonitor(),
+                fileUpdateMonitor,
                 undoManager,
                 stateManager,
                 dialogService,
-                importFormatReader);
+                taskExecutor);
 
         localDragboard = stateManager.getLocalDragboard();
 
@@ -110,12 +122,13 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                 new MainTableColumnFactory(
                         database,
                         preferencesService,
-                        preferencesService.getColumnPreferences(),
-                        libraryTab.getUndoManager(),
+                        preferencesService.getMainTableColumnPreferences(),
+                        undoManager,
                         dialogService,
-                        stateManager).createColumns());
+                        stateManager,
+                        taskExecutor).createColumns());
 
-        this.getColumns().removeIf(col -> col instanceof LibraryColumn);
+        this.getColumns().removeIf(LibraryColumn.class::isInstance);
 
         new ViewModelTableRowFactory<BibEntryTableViewModel>()
                 .withOnMouseClickedEvent((entry, event) -> {
@@ -130,9 +143,10 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                         stateManager,
                         preferencesService,
                         undoManager,
-                        Globals.getClipboardManager(),
-                        Globals.TASK_EXECUTOR,
-                        Globals.entryTypesManager))
+                        clipBoardManager,
+                        taskExecutor,
+                        Injector.instantiateModelOrService(JournalAbbreviationRepository.class),
+                        entryTypesManager))
                 .setOnDragDetected(this::handleOnDragDetected)
                 .setOnDragDropped(this::handleOnDragDropped)
                 .setOnDragOver(this::handleOnDragOver)
@@ -142,25 +156,15 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
 
         this.getSortOrder().clear();
 
-        /* KEEP for debugging purposes
-        for (var colModel : mainTablePreferences.getColumnPreferences().getColumnSortOrder()) {
-            for (var col : this.getColumns()) {
-                var tablecColModel = ((MainTableColumn<?>) col).getModel();
-                if (tablecColModel.equals(colModel)) {
-                    LOGGER.debug("Adding sort order for col {} ", col);
-                    this.getSortOrder().add(col);
-                    break;
-                }
-            }
-        }
-        */
-
         mainTablePreferences.getColumnPreferences().getColumnSortOrder().forEach(columnModel ->
                 this.getColumns().stream()
                     .map(column -> (MainTableColumn<?>) column)
                     .filter(column -> column.getModel().equals(columnModel))
                     .findFirst()
-                    .ifPresent(column -> this.getSortOrder().add(column)));
+                    .ifPresent(column -> {
+                        LOGGER.debug("Adding sort order for col {} ", column);
+                        this.getSortOrder().add(column);
+                    }));
 
         if (mainTablePreferences.getResizeColumnsToFit()) {
             this.setColumnResizePolicy(new SmartConstrainedResizePolicy());
@@ -176,7 +180,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         this.getStylesheets().add(MainTable.class.getResource("MainTable.css").toExternalForm());
 
         // Store visual state
-        new PersistenceVisualStateTable(this, preferencesService);
+        new PersistenceVisualStateTable(this, mainTablePreferences.getColumnPreferences()).addListeners();
 
         setupKeyBindings(keyBindingRepository);
 
@@ -184,7 +188,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
             if (this.getSortOrder().isEmpty()) {
                 return;
             }
-            this.jumpToSearchKey(getSortOrder().get(0), key);
+            this.jumpToSearchKey(getSortOrder().getFirst(), key);
         });
 
         database.getDatabase().registerListener(this);
@@ -192,22 +196,27 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         MainTableColumnFactory rightClickMenuFactory = new MainTableColumnFactory(
                 database,
                 preferencesService,
-                preferencesService.getColumnPreferences(),
-                libraryTab.getUndoManager(),
+                preferencesService.getMainTableColumnPreferences(),
+                undoManager,
                 dialogService,
-                stateManager);
+                stateManager,
+                taskExecutor);
+
         // Enable the header right-click menu.
-        new MainTableHeaderContextMenu(this, rightClickMenuFactory).show(true);
+        new MainTableHeaderContextMenu(this, rightClickMenuFactory, tabContainer, dialogService).show(true);
     }
 
     /**
      * This is called, if a user starts typing some characters into the keyboard with focus on main table. The {@link MainTable} will scroll to the cell with the same starting column value and typed string
+     * If the user presses any other special key as well, e.g. alt or shift we don't jump
      *
      * @param sortedColumn The sorted column in {@link MainTable}
      * @param keyEvent     The pressed character
      */
-
     private void jumpToSearchKey(TableColumn<BibEntryTableViewModel, ?> sortedColumn, KeyEvent keyEvent) {
+        if (keyEvent.isAltDown() || keyEvent.isControlDown() || keyEvent.isMetaDown() || keyEvent.isShiftDown()) {
+            return;
+        }
         if ((keyEvent.getCharacter() == null) || (sortedColumn == null)) {
             return;
         }
@@ -235,7 +244,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
 
     @Subscribe
     public void listen(EntriesAddedEvent event) {
-        DefaultTaskExecutor.runInJavaFXThread(() -> clearAndSelect(event.getFirstEntry()));
+        UiTaskExecutor.runInJavaFXThread(() -> clearAndSelect(event.getFirstEntry()));
     }
 
     public void clearAndSelect(BibEntry bibEntry) {
@@ -250,21 +259,31 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         List<BibEntry> selectedEntries = getSelectedEntries();
 
         if (!selectedEntries.isEmpty()) {
+            List<BibtexString> stringConstants = getUsedStringValues(selectedEntries);
             try {
-                Globals.getClipboardManager().setContent(selectedEntries);
-                dialogService.notify(libraryTab.formatOutputMessage(Localization.lang("Copied"), selectedEntries.size()));
+                if (stringConstants.isEmpty()) {
+                    clipBoardManager.setContent(selectedEntries, entryTypesManager);
+                } else {
+                    clipBoardManager.setContent(selectedEntries, entryTypesManager, stringConstants);
+                }
+                dialogService.notify(Localization.lang("Copied %0 entry(ies)", selectedEntries.size()));
             } catch (IOException e) {
-                LOGGER.error("Error while copying selected entries to clipboard", e);
+                LOGGER.error("Error while copying selected entries to clipboard.", e);
             }
         }
     }
 
     public void cut() {
         copy();
-        libraryTab.delete(true);
+        libraryTab.delete(StandardActions.CUT);
     }
 
     private void setupKeyBindings(KeyBindingRepository keyBindings) {
+        EditAction pasteAction = new EditAction(StandardActions.PASTE, () -> libraryTab, stateManager, undoManager);
+        EditAction copyAction = new EditAction(StandardActions.COPY, () -> libraryTab, stateManager, undoManager);
+        EditAction cutAction = new EditAction(StandardActions.CUT, () -> libraryTab, stateManager, undoManager);
+        EditAction deleteAction = new EditAction(StandardActions.DELETE_ENTRY, () -> libraryTab, stateManager, undoManager);
+
         this.addEventFilter(KeyEvent.KEY_PRESSED, event -> {
             if (event.getCode() == KeyCode.ENTER) {
                 getSelectedEntries().stream()
@@ -286,19 +305,19 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                         event.consume();
                         break;
                     case PASTE:
-                        new EditAction(StandardActions.PASTE, libraryTab.frame(), stateManager).execute();
+                        pasteAction.execute();
                         event.consume();
                         break;
                     case COPY:
-                        new EditAction(StandardActions.COPY, libraryTab.frame(), stateManager).execute();
+                        copyAction.execute();
                         event.consume();
                         break;
                     case CUT:
-                        new EditAction(StandardActions.CUT, libraryTab.frame(), stateManager).execute();
+                        cutAction.execute();
                         event.consume();
                         break;
                     case DELETE_ENTRY:
-                        new EditAction(StandardActions.DELETE_ENTRY, libraryTab.frame(), stateManager).execute();
+                        deleteAction.execute();
                         event.consume();
                         break;
                     default:
@@ -321,24 +340,22 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
     }
 
     public void paste() {
-        List<BibEntry> entriesToAdd = new ArrayList<>();
-            entriesToAdd = this.clipBoardManager.getBibTeXEntriesFromClipbaord()
-            .map(importHandler::handleBibTeXData)
-            .orElseGet(this::handleNonBibteXStringData);
+        List<BibEntry> entriesToAdd;
+        String content = ClipBoardManager.getContents();
+        entriesToAdd = importHandler.handleBibTeXData(content);
+        if (entriesToAdd.isEmpty()) {
+            entriesToAdd = handleNonBibTeXStringData(content);
+        }
+        if (entriesToAdd.isEmpty()) {
+            return;
+        }
 
-        for (BibEntry entry : entriesToAdd) {
-            importHandler.importEntryWithDuplicateCheck(database, entry);
-        }
-        if (!entriesToAdd.isEmpty()) {
-            this.requestFocus();
-        }
+        importHandler.importEntriesWithDuplicateCheck(database, entriesToAdd);
     }
 
-    private List<BibEntry> handleNonBibteXStringData() {
-        String data = this.clipBoardManager.getContents();
-        List<BibEntry> entries = new ArrayList<>();
+    private List<BibEntry> handleNonBibTeXStringData(String data) {
         try {
-            entries = this.importHandler.handleStringData(data);
+            return this.importHandler.handleStringData(data);
         } catch (FetcherException exception) {
             if (exception instanceof FetcherClientException) {
                 dialogService.showInformationDialogAndWait(Localization.lang("Look up identifier"), Localization.lang("No data was found for the identifier"));
@@ -347,14 +364,12 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
             } else {
                 dialogService.showErrorDialogAndWait(exception);
             }
+            return List.of();
         }
-        return entries;
     }
 
     public void dropEntry(List<BibEntry> entriesToAdd) {
-        for (BibEntry entry : entriesToAdd) {
-            importHandler.importEntryWithDuplicateCheck(database, (BibEntry) entry.clone());
-        }
+        importHandler.importEntriesWithDuplicateCheck(database, entriesToAdd);
     }
 
     private void handleOnDragOver(TableRow<BibEntryTableViewModel> row, BibEntryTableViewModel item, DragEvent event) {
@@ -391,8 +406,8 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
 
         List<BibEntry> entries = getSelectionModel().getSelectedItems().stream().map(BibEntryTableViewModel::getEntry).collect(Collectors.toList());
 
-        // The following is necesary to initiate the drag and drop in javafx, although we don't need the contents
-        // It doesn't work without
+        // The following is necessary to initiate the drag and drop in JavaFX,
+        // although we don't need the contents, it does not work without
         // Drag'n'drop to other tabs use COPY TransferMode, drop to group sidepane use MOVE
         ClipboardContent content = new ClipboardContent();
         Dragboard dragboard = startDragAndDrop(TransferMode.COPY_OR_MOVE);
@@ -417,7 +432,8 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
             // Center -> link files to entry
             // Depending on the pressed modifier, move/copy/link files to drop target
             switch (ControlHelper.getDroppingMouseLocation(row, event)) {
-                case TOP, BOTTOM -> importHandler.importFilesInBackground(files).executeWith(Globals.TASK_EXECUTOR);
+                case TOP, BOTTOM ->
+                        importHandler.importFilesInBackground(files).executeWith(taskExecutor);
                 case CENTER -> {
                     BibEntry entry = target.getEntry();
                     switch (event.getTransferMode()) {
@@ -427,7 +443,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                         }
                         case MOVE -> {
                             LOGGER.debug("Mode MOVE"); // alt on win
-                            importHandler.getLinker().moveFilesToFileDirAndAddToEntry(entry, files, libraryTab.getIndexingTaskManager());
+                            importHandler.getLinker().moveFilesToFileDirRenameAndAddToEntry(entry, files, libraryTab.getIndexingTaskManager());
                         }
                         case COPY -> {
                             LOGGER.debug("Mode Copy"); // ctrl on win
@@ -449,7 +465,7 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
 
         if (event.getDragboard().hasFiles()) {
             List<Path> files = event.getDragboard().getFiles().stream().map(File::toPath).collect(Collectors.toList());
-            importHandler.importFilesInBackground(files).executeWith(Globals.TASK_EXECUTOR);
+            importHandler.importFilesInBackground(files).executeWith(taskExecutor);
 
             success = true;
         }
@@ -466,10 +482,6 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
         return model;
     }
 
-    public BibEntry getEntryAt(int row) {
-        return model.getEntriesFilteredAndSorted().get(row).getEntry();
-    }
-
     public List<BibEntry> getSelectedEntries() {
         return getSelectionModel()
                 .getSelectedItems()
@@ -483,5 +495,9 @@ public class MainTable extends TableView<BibEntryTableViewModel> {
                     .stream()
                     .filter(viewModel -> viewModel.getEntry().equals(entry))
                     .findFirst();
+    }
+
+    private List<BibtexString> getUsedStringValues(List<BibEntry> entries) {
+        return database.getDatabase().getUsedStrings(entries);
     }
 }
