@@ -44,7 +44,7 @@ public class OpenUrlAction extends SimpleCommand {
                 return;
             }
 
-            BibEntry entry = entries.get(0);
+            BibEntry entry = entries.getFirst();
 
             // ToDo: Create dialog or menu to chose which one to open
             // URL - DOI - DOI - EPRINT
@@ -53,6 +53,10 @@ public class OpenUrlAction extends SimpleCommand {
             if (entry.hasField(StandardField.URI)) {
                 link = entry.getField(StandardField.URI);
                 field = StandardField.URI;
+            }
+            if (entry.hasField(StandardField.ISBN)) {
+                link = entry.getField(StandardField.ISBN);
+                field = StandardField.ISBN;
             }
             if (entry.hasField(StandardField.DOI)) {
                 link = entry.getField(StandardField.DOI);
@@ -68,7 +72,7 @@ public class OpenUrlAction extends SimpleCommand {
                     if (field.equals(StandardField.DOI) && preferences.getDOIPreferences().isUseCustom()) {
                         JabRefDesktop.openCustomDoi(link.get(), preferences, dialogService);
                     } else {
-                        JabRefDesktop.openExternalViewer(databaseContext, preferences, link.get(), field);
+                        JabRefDesktop.openExternalViewer(databaseContext, preferences, link.get(), field, dialogService, entry);
                     }
                 } catch (IOException e) {
                     dialogService.showErrorDialogAndWait(Localization.lang("Unable to open link."), e);
