@@ -14,7 +14,6 @@ import javafx.collections.FXCollections;
 import javafx.collections.ListChangeListener;
 
 import org.jabref.gui.DialogService;
-import org.jabref.gui.Globals;
 import org.jabref.gui.preferences.PreferenceTabViewModel;
 import org.jabref.gui.util.BackgroundTask;
 import org.jabref.gui.util.FileDialogConfiguration;
@@ -25,8 +24,8 @@ import org.jabref.logic.journals.JournalAbbreviationPreferences;
 import org.jabref.logic.journals.JournalAbbreviationRepository;
 import org.jabref.logic.l10n.Localization;
 import org.jabref.logic.util.StandardFileType;
-import org.jabref.preferences.PreferencesService;
 
+import com.airhacks.afterburner.injection.Injector;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -51,7 +50,6 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
     private final SimpleBooleanProperty isAbbreviationEditableAndRemovable = new SimpleBooleanProperty(false);
     private final SimpleBooleanProperty useFJournal = new SimpleBooleanProperty(true);
 
-    private final PreferencesService preferences;
     private final DialogService dialogService;
     private final TaskExecutor taskExecutor;
 
@@ -59,15 +57,14 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
     private final JournalAbbreviationRepository journalAbbreviationRepository;
     private boolean shouldWriteLists;
 
-    public JournalAbbreviationsTabViewModel(PreferencesService preferences,
+    public JournalAbbreviationsTabViewModel(JournalAbbreviationPreferences abbreviationsPreferences,
                                             DialogService dialogService,
                                             TaskExecutor taskExecutor,
                                             JournalAbbreviationRepository journalAbbreviationRepository) {
-        this.preferences = Objects.requireNonNull(preferences);
         this.dialogService = Objects.requireNonNull(dialogService);
         this.taskExecutor = Objects.requireNonNull(taskExecutor);
         this.journalAbbreviationRepository = Objects.requireNonNull(journalAbbreviationRepository);
-        this.abbreviationsPreferences = preferences.getJournalAbbreviationPreferences();
+        this.abbreviationsPreferences = abbreviationsPreferences;
 
         abbreviationsCount.bind(abbreviations.sizeProperty());
         currentAbbreviation.addListener((observable, oldValue, newValue) -> {
@@ -85,7 +82,7 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
                 isFileRemovable.set(!newValue.isBuiltInListProperty().get());
                 abbreviations.bindBidirectional(newValue.abbreviationsProperty());
                 if (!abbreviations.isEmpty()) {
-                    currentAbbreviation.set(abbreviations.get(abbreviations.size() - 1));
+                    currentAbbreviation.set(abbreviations.getLast());
                 }
             } else {
                 isFileRemovable.set(false);
@@ -93,15 +90,15 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
                     currentAbbreviation.set(null);
                     abbreviations.clear();
                 } else {
-                    currentFile.set(journalFiles.get(0));
+                    currentFile.set(journalFiles.getFirst());
                 }
             }
         });
         journalFiles.addListener((ListChangeListener<AbbreviationsFileViewModel>) lcl -> {
             if (lcl.next()) {
                 if (!lcl.wasReplaced()) {
-                    if (lcl.wasAdded() && !lcl.getAddedSubList().get(0).isBuiltInListProperty().get()) {
-                        currentFile.set(lcl.getAddedSubList().get(0));
+                    if (lcl.wasAdded() && !lcl.getAddedSubList().getFirst().isBuiltInListProperty().get()) {
+                        currentFile.set(lcl.getAddedSubList().getFirst());
                     }
                 }
             }
@@ -336,19 +333,17 @@ public class JournalAbbreviationsTabViewModel implements PreferenceTabViewModel 
                                                                  .map(path -> path.getAbsolutePath().get().toAbsolutePath().toString())
                                                                  .collect(Collectors.toList());
 
-                    preferences.storeJournalAbbreviationPreferences(new JournalAbbreviationPreferences(
-                            journalStringList,
-                            abbreviationsPreferences.getDefaultEncoding(),
-                            useFJournal.getValue()
-                    ));
+                    abbreviationsPreferences.setExternalJournalLists(journalStringList);
+                    abbreviationsPreferences.setUseFJournalField(useFJournal.get());
 
                     if (shouldWriteLists) {
                         saveJournalAbbreviationFiles();
                         shouldWriteLists = false;
                     }
                 })
-                .onSuccess((success) -> Globals.journalAbbreviationRepository =
-                        JournalAbbreviationLoader.loadRepository(preferences.getJournalAbbreviationPreferences()))
+                .onSuccess(success -> Injector.setModelOrService(
+                        JournalAbbreviationRepository.class,
+                        JournalAbbreviationLoader.loadRepository(abbreviationsPreferences)))
                 .onFailure(exception -> LOGGER.error("Failed to store journal preferences.", exception))
                 .executeWith(taskExecutor);
     }
