@@ -16,10 +16,10 @@ import org.jabref.gui.DialogService;
 import org.jabref.gui.externalfiletype.ExternalFileType;
 import org.jabref.gui.maintable.ColumnPreferences;
 import org.jabref.gui.maintable.MainTableColumnModel;
-import org.jabref.gui.maintable.MainTableNameFormatPreferences;
-import org.jabref.gui.maintable.MainTableNameFormatPreferences.AbbreviationStyle;
-import org.jabref.gui.maintable.MainTableNameFormatPreferences.DisplayStyle;
 import org.jabref.gui.maintable.MainTablePreferences;
+import org.jabref.gui.maintable.NameDisplayPreferences;
+import org.jabref.gui.maintable.NameDisplayPreferences.AbbreviationStyle;
+import org.jabref.gui.maintable.NameDisplayPreferences.DisplayStyle;
 import org.jabref.gui.preferences.PreferenceTabViewModel;
 import org.jabref.gui.specialfields.SpecialFieldsPreferences;
 import org.jabref.gui.util.NoSelectionModel;
@@ -76,11 +76,15 @@ public class TableTabViewModel implements PreferenceTabViewModel {
 
     private ColumnPreferences initialColumnPreferences;
     private final SpecialFieldsPreferences specialFieldsPreferences;
+    private final NameDisplayPreferences nameDisplayPreferences;
+    private final MainTablePreferences mainTablePreferences;
 
     public TableTabViewModel(DialogService dialogService, PreferencesService preferences) {
         this.dialogService = dialogService;
         this.preferences = preferences;
         this.specialFieldsPreferences = preferences.getSpecialFieldsPreferences();
+        this.nameDisplayPreferences = preferences.getNameDisplayPreferences();
+        this.mainTablePreferences = preferences.getMainTablePreferences();
 
         specialFieldsEnabledProperty.addListener((observable, oldValue, newValue) -> {
             if (newValue) {
@@ -100,8 +104,8 @@ public class TableTabViewModel implements PreferenceTabViewModel {
 
         columnsNotEmptyValidator = new FunctionBasedValidator<>(
                 columnsListProperty,
-                list -> list.size() > 0,
-                ValidationMessage.error(String.format("%s > %s %n %n %s",
+                list -> !list.isEmpty(),
+                ValidationMessage.error("%s > %s %n %n %s".formatted(
                         Localization.lang("Entry table columns"),
                         Localization.lang("Columns"),
                         Localization.lang("List must not be empty."))));
@@ -109,13 +113,11 @@ public class TableTabViewModel implements PreferenceTabViewModel {
 
     @Override
     public void setValues() {
-        MainTablePreferences initialMainTablePreferences = preferences.getMainTablePreferences();
-        initialColumnPreferences = initialMainTablePreferences.getColumnPreferences();
-        MainTableNameFormatPreferences initialNameFormatPreferences = preferences.getMainTableNameFormatPreferences();
+        initialColumnPreferences = mainTablePreferences.getColumnPreferences();
 
         specialFieldsEnabledProperty.setValue(specialFieldsPreferences.isSpecialFieldsEnabled());
-        extraFileColumnsEnabledProperty.setValue(initialMainTablePreferences.getExtraFileColumnsEnabled());
-        autoResizeColumnsProperty.setValue(initialMainTablePreferences.getResizeColumnsToFit());
+        extraFileColumnsEnabledProperty.setValue(mainTablePreferences.getExtraFileColumnsEnabled());
+        autoResizeColumnsProperty.setValue(mainTablePreferences.getResizeColumnsToFit());
 
         fillColumnList();
 
@@ -124,6 +126,7 @@ public class TableTabViewModel implements PreferenceTabViewModel {
                 new MainTableColumnModel(MainTableColumnModel.Type.INDEX),
                 new MainTableColumnModel(MainTableColumnModel.Type.LINKED_IDENTIFIER),
                 new MainTableColumnModel(MainTableColumnModel.Type.GROUPS),
+                new MainTableColumnModel(MainTableColumnModel.Type.GROUP_ICONS),
                 new MainTableColumnModel(MainTableColumnModel.Type.FILES),
                 new MainTableColumnModel(MainTableColumnModel.Type.NORMALFIELD, StandardField.TIMESTAMP.getName()),
                 new MainTableColumnModel(MainTableColumnModel.Type.NORMALFIELD, StandardField.OWNER.getName()),
@@ -141,18 +144,18 @@ public class TableTabViewModel implements PreferenceTabViewModel {
             insertSpecialFieldColumns();
         }
 
-        if (extraFileColumnsEnabledProperty.getValue()) {
+        if (mainTablePreferences.getExtraFileColumnsEnabled()) {
             insertExtraFileColumns();
         }
 
-        switch (initialNameFormatPreferences.getDisplayStyle()) {
+        switch (nameDisplayPreferences.getDisplayStyle()) {
             case NATBIB -> namesNatbibProperty.setValue(true);
             case AS_IS -> nameAsIsProperty.setValue(true);
             case FIRSTNAME_LASTNAME -> nameFirstLastProperty.setValue(true);
             case LASTNAME_FIRSTNAME -> nameLastFirstProperty.setValue(true);
         }
 
-        switch (initialNameFormatPreferences.getAbbreviationStyle()) {
+        switch (nameDisplayPreferences.getAbbreviationStyle()) {
             case FULL -> abbreviationEnabledProperty.setValue(true);
             case LASTNAME_ONLY -> abbreviationLastNameOnlyProperty.setValue(true);
             case NONE -> abbreviationDisabledProperty.setValue(true);
@@ -170,12 +173,12 @@ public class TableTabViewModel implements PreferenceTabViewModel {
         EnumSet.allOf(SpecialField.class).stream()
                .map(Field::getName)
                .map(name -> new MainTableColumnModel(MainTableColumnModel.Type.SPECIALFIELD, name))
-               .forEach(item -> availableColumnsProperty.getValue().add(0, item));
+               .forEach(item -> availableColumnsProperty.getValue().addFirst(item));
     }
 
     private void removeSpecialFieldColumns() {
-        columnsListProperty.getValue().removeIf(column -> column.getType().equals(MainTableColumnModel.Type.SPECIALFIELD));
-        availableColumnsProperty.getValue().removeIf(column -> column.getType().equals(MainTableColumnModel.Type.SPECIALFIELD));
+        columnsListProperty.getValue().removeIf(column -> column.getType() == MainTableColumnModel.Type.SPECIALFIELD);
+        availableColumnsProperty.getValue().removeIf(column -> column.getType() == MainTableColumnModel.Type.SPECIALFIELD);
     }
 
     private void insertExtraFileColumns() {
@@ -186,8 +189,8 @@ public class TableTabViewModel implements PreferenceTabViewModel {
     }
 
     private void removeExtraFileColumns() {
-        columnsListProperty.getValue().removeIf(column -> column.getType().equals(MainTableColumnModel.Type.EXTRAFILE));
-        availableColumnsProperty.getValue().removeIf(column -> column.getType().equals(MainTableColumnModel.Type.EXTRAFILE));
+        columnsListProperty.getValue().removeIf(column -> column.getType() == MainTableColumnModel.Type.EXTRAFILE);
+        availableColumnsProperty.getValue().removeIf(column -> column.getType() == MainTableColumnModel.Type.EXTRAFILE);
     }
 
     public void insertColumnInList() {
@@ -231,34 +234,29 @@ public class TableTabViewModel implements PreferenceTabViewModel {
 
     @Override
     public void storeSettings() {
-        MainTablePreferences newMainTablePreferences = preferences.getMainTablePreferences();
-        preferences.storeMainTablePreferences(new MainTablePreferences(
-                new ColumnPreferences(
-                        columnsListProperty.getValue(),
-                        newMainTablePreferences.getColumnPreferences().getColumnSortOrder()),
-                autoResizeColumnsProperty.getValue(),
-                extraFileColumnsEnabledProperty.getValue()
-        ));
+        mainTablePreferences.getColumnPreferences().setColumns(columnsListProperty.getValue());
+        mainTablePreferences.setResizeColumnsToFit(autoResizeColumnsProperty.getValue());
+        mainTablePreferences.setExtraFileColumnsEnabled(extraFileColumnsEnabledProperty.getValue());
 
         specialFieldsPreferences.setSpecialFieldsEnabled(specialFieldsEnabledProperty.getValue());
 
-        DisplayStyle displayStyle = DisplayStyle.LASTNAME_FIRSTNAME;
-        if (namesNatbibProperty.getValue()) {
-            displayStyle = DisplayStyle.NATBIB;
+        if (nameLastFirstProperty.getValue()) {
+            nameDisplayPreferences.setDisplayStyle(DisplayStyle.LASTNAME_FIRSTNAME);
+        } else if (namesNatbibProperty.getValue()) {
+            nameDisplayPreferences.setDisplayStyle(DisplayStyle.NATBIB);
         } else if (nameAsIsProperty.getValue()) {
-            displayStyle = DisplayStyle.AS_IS;
+            nameDisplayPreferences.setDisplayStyle(DisplayStyle.AS_IS);
         } else if (nameFirstLastProperty.getValue()) {
-            displayStyle = DisplayStyle.FIRSTNAME_LASTNAME;
+            nameDisplayPreferences.setDisplayStyle(DisplayStyle.FIRSTNAME_LASTNAME);
         }
 
-        AbbreviationStyle abbreviationStyle = AbbreviationStyle.NONE;
-        if (abbreviationEnabledProperty.getValue()) {
-            abbreviationStyle = AbbreviationStyle.FULL;
+        if (abbreviationDisabledProperty.getValue()) {
+            nameDisplayPreferences.setAbbreviationStyle(AbbreviationStyle.NONE);
+        } else if (abbreviationEnabledProperty.getValue()) {
+            nameDisplayPreferences.setAbbreviationStyle(AbbreviationStyle.FULL);
         } else if (abbreviationLastNameOnlyProperty.getValue()) {
-            abbreviationStyle = AbbreviationStyle.LASTNAME_ONLY;
+            nameDisplayPreferences.setAbbreviationStyle(AbbreviationStyle.LASTNAME_ONLY);
         }
-
-        preferences.storeMainTableNameFormatPreferences(new MainTableNameFormatPreferences(displayStyle, abbreviationStyle));
     }
 
     ValidationStatus columnsListValidationStatus() {
