@@ -1,13 +1,13 @@
 package org.jabref.logic.bst;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.ListIterator;
 import java.util.Map;
 
-import org.jabref.logic.bibtex.FieldContentFormatterPreferences;
+import org.jabref.logic.bibtex.FieldPreferences;
 import org.jabref.logic.bibtex.FieldWriter;
-import org.jabref.logic.bibtex.FieldWriterPreferences;
 import org.jabref.logic.bibtex.InvalidFieldValueException;
 import org.jabref.model.entry.Month;
 import org.jabref.model.entry.field.Field;
@@ -58,7 +58,9 @@ class BstVMVisitor extends BstBaseVisitor<Integer> {
 
     @Override
     public Integer visitFunctionCommand(BstParser.FunctionCommandContext ctx) {
-        bstVMContext.functions().put(ctx.id.getText(),
+        String name = ctx.id.getText();
+        LOGGER.trace("Function: {}", name);
+        bstVMContext.functions().put(name,
                 (visitor, functionContext) -> visitor.visit(ctx.function));
         return BstVM.TRUE;
     }
@@ -73,7 +75,7 @@ class BstVMVisitor extends BstBaseVisitor<Integer> {
 
     @Override
     public Integer visitReadCommand(BstParser.ReadCommandContext ctx) {
-        FieldWriter fieldWriter = new FieldWriter(new FieldWriterPreferences(true, List.of(StandardField.MONTH), new FieldContentFormatterPreferences()));
+        FieldWriter fieldWriter = new FieldWriter(new FieldPreferences(true, List.of(StandardField.MONTH), Collections.emptyList()));
         for (BstEntry e : bstVMContext.entries()) {
             for (Map.Entry<String, String> mEntry : e.fields.entrySet()) {
                 Field field = FieldFactory.parseField(mEntry.getKey());
@@ -93,8 +95,7 @@ class BstVMVisitor extends BstBaseVisitor<Integer> {
                                                                    .orElse(result);
                                                    }
                                                    return result;
-                                               } catch (
-                                                       InvalidFieldValueException invalidFieldValueException) {
+                                               } catch (InvalidFieldValueException invalidFieldValueException) {
                                                    // in case there is something wrong with the content, just return the content itself
                                                    return content;
                                                }
@@ -116,18 +117,24 @@ class BstVMVisitor extends BstBaseVisitor<Integer> {
     @Override
     public Integer visitExecuteCommand(BstParser.ExecuteCommandContext ctx) {
         this.selectedBstEntry = null;
-        visit(ctx.bstFunction());
+        BstParser.BstFunctionContext bstFunction = ctx.bstFunction();
+        String name = bstFunction.getText();
+        LOGGER.trace("Executing function {}", name);
+        visit(bstFunction);
+        LOGGER.trace("Finished executing function {}", name);
 
         return BstVM.TRUE;
     }
 
     @Override
     public Integer visitIterateCommand(BstParser.IterateCommandContext ctx) {
+        String name = ctx.bstFunction().getText();
+        LOGGER.trace("Executing {}", name);
         for (BstEntry entry : bstVMContext.entries()) {
             this.selectedBstEntry = entry;
             visit(ctx.bstFunction());
         }
-
+        LOGGER.trace("Finished executing {}", name);
         return BstVM.TRUE;
     }
 
@@ -183,51 +190,64 @@ class BstVMVisitor extends BstBaseVisitor<Integer> {
 
     @Override
     public Integer visitIdentifier(BstParser.IdentifierContext ctx) {
-        resolveIdentifier(ctx.IDENTIFIER().getText(), ctx);
+        String name = ctx.IDENTIFIER().getText();
+        LOGGER.trace("Identifier: {}", name);
+        resolveIdentifier(name, ctx);
         return BstVM.TRUE;
     }
 
     protected void resolveIdentifier(String name, ParserRuleContext ctx) {
+        LOGGER.trace("Resolving name {} at resolveIdentifier", name);
+        LOGGER.trace("Stack: {}", bstVMContext.stack());
         if (selectedBstEntry != null) {
+            LOGGER.trace("selectedBstEntry is available");
             if (selectedBstEntry.fields.containsKey(name)) {
-                bstVMContext.stack().push(selectedBstEntry.fields.get(name));
+                String value = selectedBstEntry.fields.get(name);
+                LOGGER.trace("entry field {}={}", name, value);
+                bstVMContext.stack().push(value);
                 return;
             }
             if (selectedBstEntry.localStrings.containsKey(name)) {
-                bstVMContext.stack().push(selectedBstEntry.localStrings.get(name));
+                String value = selectedBstEntry.localStrings.get(name);
+                LOGGER.trace("entry local string {}={}", name, value);
+                bstVMContext.stack().push(value);
                 return;
             }
             if (selectedBstEntry.localIntegers.containsKey(name)) {
-                bstVMContext.stack().push(selectedBstEntry.localIntegers.get(name));
+                Integer value = selectedBstEntry.localIntegers.get(name);
+                LOGGER.trace("entry local integer {}={}", name, value);
+                bstVMContext.stack().push(value);
                 return;
             }
         }
 
         if (bstVMContext.strings().containsKey(name)) {
-            bstVMContext.stack().push(bstVMContext.strings().get(name));
+            String value = bstVMContext.strings().get(name);
+            LOGGER.trace("global string {}={}", name, value);
+            bstVMContext.stack().push(value);
             return;
         }
         if (bstVMContext.integers().containsKey(name)) {
-            bstVMContext.stack().push(bstVMContext.integers().get(name));
+            Integer value = bstVMContext.integers().get(name);
+            LOGGER.trace("global integer {}={}", name, value);
+            bstVMContext.stack().push(value);
             return;
         }
         if (bstVMContext.functions().containsKey(name)) {
-            bstVMContext.functions().get(name).execute(this, ctx);
+            LOGGER.trace("function {}", name);
+            bstVMContext.functions().get(name).execute(this, ctx, selectedBstEntry);
             return;
         }
 
+        LOGGER.warn("No matching identifier found: {}", name);
         throw new BstVMException("No matching identifier found: " + name);
     }
 
     @Override
     public Integer visitBstFunction(BstParser.BstFunctionContext ctx) {
         String name = ctx.getChild(0).getText();
-        if (bstVMContext.functions().containsKey(name)) {
-            bstVMContext.functions().get(name).execute(this, ctx, selectedBstEntry);
-        } else {
-            visit(ctx.getChild(0));
-        }
-
+        LOGGER.trace("Resolving name {} at visitBstFunction", name);
+        resolveIdentifier(name, ctx);
         return BstVM.TRUE;
     }
 
@@ -253,7 +273,7 @@ class BstVMVisitor extends BstBaseVisitor<Integer> {
                 }
             } catch (BstVMException e) {
                 bstVMContext.path().ifPresentOrElse(
-                        (path) -> LOGGER.error("{} ({})", e.getMessage(), path),
+                        path -> LOGGER.error("{} ({})", e.getMessage(), path),
                         () -> LOGGER.error(e.getMessage()));
                 throw e;
             }
