@@ -1,14 +1,15 @@
 package org.jabref.model.openoffice.ootext;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.Deque;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.Set;
-import java.util.Stack;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
 
@@ -33,6 +34,7 @@ import com.sun.star.beans.XMultiPropertyStates;
 import com.sun.star.beans.XPropertySet;
 import com.sun.star.beans.XPropertySetInfo;
 import com.sun.star.beans.XPropertyState;
+import com.sun.star.lang.IllegalArgumentException;
 import com.sun.star.lang.Locale;
 import com.sun.star.lang.WrappedTargetException;
 import com.sun.star.style.CaseMap;
@@ -145,7 +147,7 @@ public class OOTextIntoOO {
         cursor.collapseToEnd();
 
         MyPropertyStack formatStack = new MyPropertyStack(cursor);
-        Stack<String> expectEnd = new Stack<>();
+        Deque<String> expectEnd = new ArrayDeque<>();
 
         // We need to extract formatting. Use a simple regexp search iteration:
         int piv = 0;
@@ -216,12 +218,12 @@ public class OOTextIntoOO {
                                 } else {
                                     if (setParagraphStyle(cursor, value)) {
                                         // Presumably tested already:
-                                        LOGGER.debug(String.format("oo:ParaStyleName=\"%s\" failed", value));
+                                        LOGGER.debug("oo:ParaStyleName=\"%s\" failed".formatted(value));
                                     }
                                 }
                                 break;
                             default:
-                                LOGGER.warn(String.format("Unexpected attribute '%s' for <%s>", key, tagName));
+                                LOGGER.warn("Unexpected attribute '%s' for <%s>".formatted(key, tagName));
                                 break;
                         }
                     }
@@ -232,7 +234,7 @@ public class OOTextIntoOO {
                         String value = pair.b;
                         switch (key) {
                             case "target" -> UnoCrossRef.insertReferenceToPageNumberOfReferenceMark(doc, value, cursor);
-                            default -> LOGGER.warn(String.format("Unexpected attribute '%s' for <%s>", key, tagName));
+                            default -> LOGGER.warn("Unexpected attribute '%s' for <%s>".formatted(key, tagName));
                         }
                     }
                     break;
@@ -260,10 +262,10 @@ public class OOTextIntoOO {
                                     settings.addAll(setCharCaseMap(CaseMap.SMALLCAPS));
                                     break;
                                 }
-                                LOGGER.warn(String.format("Unexpected value %s for attribute '%s' for <%s>",
+                                LOGGER.warn("Unexpected value %s for attribute '%s' for <%s>".formatted(
                                         value, key, tagName));
                             }
-                            default -> LOGGER.warn(String.format("Unexpected attribute '%s' for <%s>", key, tagName));
+                            default -> LOGGER.warn("Unexpected attribute '%s' for <%s>".formatted(key, tagName));
                         }
                     }
                     formatStack.pushLayer(settings);
@@ -282,14 +284,14 @@ public class OOTextIntoOO {
                     formatStack.popLayer();
                     String expected = expectEnd.pop();
                     if (!tagName.equals(expected)) {
-                        LOGGER.warn(String.format("expected '<%s>', found '<%s>' after '%s'",
+                        LOGGER.warn("expected '<%s>', found '<%s>' after '%s'".formatted(
                                 expected,
                                 tagName,
                                 currentSubstring));
                     }
                     break;
                 default:
-                    LOGGER.warn(String.format("ignoring unknown tag '<%s>'", tagName));
+                    LOGGER.warn("ignoring unknown tag '<%s>'".formatted(tagName));
                     break;
             }
 
@@ -302,12 +304,12 @@ public class OOTextIntoOO {
         formatStack.apply(cursor);
         cursor.collapseToEnd();
 
-        if (!expectEnd.empty()) {
+        if (!expectEnd.isEmpty()) {
             StringBuilder rest = new StringBuilder();
             for (String s : expectEnd) {
-                rest.insert(0, String.format("<%s>", s));
+                rest.insert(0, "<%s>".formatted(s));
             }
-            LOGGER.warn(String.format("OOTextIntoOO.write: expectEnd stack is not empty at the end: %s%n", rest));
+            LOGGER.warn("OOTextIntoOO.write: expectEnd stack is not empty at the end: %s%n".formatted(rest));
         }
     }
 
@@ -371,7 +373,7 @@ public class OOTextIntoOO {
             if (knownToFail.contains(p.Name)) {
                 continue;
             }
-            LOGGER.warn(String.format("OOTextIntoOO.removeDirectFormatting failed on '%s'", p.Name));
+            LOGGER.warn("OOTextIntoOO.removeDirectFormatting failed on '%s'".formatted(p.Name));
         }
     }
 
@@ -438,7 +440,7 @@ public class OOTextIntoOO {
         /**
          * Maintain a stack of layers, each containing a description of the desired state of properties. Each description is an ArrayList of property values, Optional.empty() encoding "not directly set".
          */
-        final Stack<ArrayList<Optional<Object>>> layers;
+        final Deque<ArrayList<Optional<Object>>> layers;
 
         MyPropertyStack(XTextCursor cursor) {
             XPropertySet propertySet = UnoCast.cast(XPropertySet.class, cursor).get();
@@ -493,7 +495,7 @@ public class OOTextIntoOO {
                 }
             }
 
-            this.layers = new Stack<>();
+            this.layers = new ArrayDeque<>();
             this.layers.push(initialValuesOpt);
         }
 
@@ -509,7 +511,7 @@ public class OOTextIntoOO {
                 String name = pair.a;
                 Integer index = goodNameToIndex.get(name);
                 if (index == null) {
-                    LOGGER.warn(String.format("pushLayer: '%s' is not in goodNameToIndex", name));
+                    LOGGER.warn("pushLayer: '%s' is not in goodNameToIndex".formatted(name));
                     continue;
                 }
                 Object newValue = pair.b;
@@ -671,9 +673,9 @@ public class OOTextIntoOO {
             throw new java.lang.IllegalArgumentException("setCharLocale \"\" or null");
         }
         String[] parts = value.split("-");
-        String language = (parts.length > 0) ? parts[0] : "";
-        String country = (parts.length > 1) ? parts[1] : "";
-        String variant = (parts.length > 2) ? parts[2] : "";
+        String language = parts.length > 0 ? parts[0] : "";
+        String country = parts.length > 1 ? parts[1] : "";
+        String variant = parts.length > 2 ? parts[2] : "";
         return setCharLocale(new Locale(language, country, variant));
     }
 
@@ -688,13 +690,13 @@ public class OOTextIntoOO {
                                                                   boolean relative,
                                                                   MyPropertyStack formatStack) {
         List<OOPair<String, Object>> settings = new ArrayList<>();
-        Optional<Short> oldValue = (formatStack
+        Optional<Short> oldValue = formatStack
                 .getPropertyValue(CHAR_ESCAPEMENT)
-                .map(e -> (short) e));
+                .map(e -> (short) e);
 
-        Optional<Byte> oldHeight = (formatStack
+        Optional<Byte> oldHeight = formatStack
                 .getPropertyValue(CHAR_ESCAPEMENT_HEIGHT)
-                .map(e -> (byte) e));
+                .map(e -> (byte) e);
 
         if (relative && (value.isPresent() || height.isPresent())) {
             double oldHeightFloat = oldHeight.orElse(CHAR_ESCAPEMENT_HEIGHT_DEFAULT) * 0.01;
@@ -748,7 +750,7 @@ public class OOTextIntoOO {
             return PASS;
         } catch (UnknownPropertyException
                 | PropertyVetoException
-                | com.sun.star.lang.IllegalArgumentException
+                | IllegalArgumentException
                 | WrappedTargetException ex) {
             return FAIL;
         }
@@ -757,7 +759,7 @@ public class OOTextIntoOO {
     private static void insertParagraphBreak(XText text, XTextCursor cursor) {
         try {
             text.insertControlCharacter(cursor, ControlCharacter.PARAGRAPH_BREAK, true);
-        } catch (com.sun.star.lang.IllegalArgumentException ex) {
+        } catch (IllegalArgumentException ex) {
             // Assuming it means wrong code for ControlCharacter.
             // https://api.libreoffice.org/docs/idl/ref/  does not tell.
             // If my assumption is correct, we never get here.
