@@ -12,12 +12,14 @@ import java.util.Iterator;
 import java.util.List;
 import java.util.Optional;
 
-import org.jabref.logic.citationkeypattern.AbstractCitationKeyPattern;
-import org.jabref.logic.citationkeypattern.DatabaseCitationKeyPattern;
-import org.jabref.logic.citationkeypattern.GlobalCitationKeyPattern;
+import javafx.collections.FXCollections;
+
+import org.jabref.logic.citationkeypattern.AbstractCitationKeyPatterns;
+import org.jabref.logic.citationkeypattern.DatabaseCitationKeyPatterns;
+import org.jabref.logic.citationkeypattern.GlobalCitationKeyPatterns;
 import org.jabref.logic.cleanup.FieldFormatterCleanup;
 import org.jabref.logic.cleanup.FieldFormatterCleanups;
-import org.jabref.logic.exporter.SavePreferences;
+import org.jabref.logic.exporter.SaveConfiguration;
 import org.jabref.logic.formatter.bibtexfields.EscapeAmpersandsFormatter;
 import org.jabref.logic.formatter.bibtexfields.EscapeDollarSignFormatter;
 import org.jabref.logic.formatter.bibtexfields.EscapeUnderscoresFormatter;
@@ -29,6 +31,8 @@ import org.jabref.logic.importer.ImportFormatPreferences;
 import org.jabref.logic.importer.ParseException;
 import org.jabref.logic.importer.ParserResult;
 import org.jabref.logic.util.OS;
+import org.jabref.model.TreeNode;
+import org.jabref.model.database.BibDatabase;
 import org.jabref.model.database.BibDatabaseMode;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.BibEntryType;
@@ -51,61 +55,59 @@ import org.jabref.model.groups.GroupTreeNode;
 import org.jabref.model.groups.RegexKeywordGroup;
 import org.jabref.model.groups.TexGroup;
 import org.jabref.model.groups.WordKeywordGroup;
-import org.jabref.model.metadata.SaveOrderConfig;
-import org.jabref.model.util.DummyFileUpdateMonitor;
-import org.jabref.model.util.FileUpdateMonitor;
+import org.jabref.model.metadata.SaveOrder;
 
 import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.function.Executable;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.CsvSource;
 import org.mockito.Answers;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
-import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
+/**
+ * Tests for reading whole bib files can be found at {@link org.jabref.logic.importer.fileformat.BibtexImporterTest}
+ * <p>
+ * Tests cannot be executed concurrently, because Localization is used at {@link BibtexParser#parseAndAddEntry(String)}
+ */
 class BibtexParserTest {
-
+    private static final String BIB_DESK_ROOT_GROUP_NAME = "BibDeskGroups";
     private ImportFormatPreferences importFormatPreferences;
     private BibtexParser parser;
-    private final FileUpdateMonitor fileMonitor = new DummyFileUpdateMonitor();
 
     @BeforeEach
     void setUp() {
         importFormatPreferences = mock(ImportFormatPreferences.class, Answers.RETURNS_DEEP_STUBS);
         when(importFormatPreferences.bibEntryPreferences().getKeywordSeparator()).thenReturn(',');
-        parser = new BibtexParser(importFormatPreferences, new DummyFileUpdateMonitor());
+        parser = new BibtexParser(importFormatPreferences);
     }
 
     @Test
-    void parseWithNullThrowsNullPointerException() throws Exception {
+    void parseWithNullThrowsNullPointerException() {
         Executable toBeTested = () -> parser.parse(null);
-
         assertThrows(NullPointerException.class, toBeTested);
     }
 
     @Test
     void fromStringRecognizesEntry() throws ParseException {
-        List<BibEntry> parsed = parser
+        List<BibEntry> result = parser
                 .parseEntries("@article{test,author={Ed von Test}}");
-
-        BibEntry expected = new BibEntry();
-        expected.setType(StandardEntryType.Article);
-        expected.setCitationKey("test");
-        expected.setField(StandardField.AUTHOR, "Ed von Test");
-
-        assertEquals(List.of(expected), parsed);
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result);
     }
 
     @Test
     void fromStringReturnsEmptyListFromEmptyString() throws ParseException {
         Collection<BibEntry> parsed = parser.parseEntries("");
-
-        assertNotNull(parsed);
         assertEquals(Collections.emptyList(), parsed);
     }
 
@@ -113,8 +115,6 @@ class BibtexParserTest {
     void fromStringReturnsEmptyListIfNoEntryRecognized() throws ParseException {
         Collection<BibEntry> parsed = parser
                 .parseEntries("@@article@@{{{{{{}");
-
-        assertNotNull(parsed);
         assertEquals(Collections.emptyList(), parsed);
     }
 
@@ -125,14 +125,11 @@ class BibtexParserTest {
                         @article{canh05,  author = {Crowston, K. and Annabi, H.},
                           title = {Title A}}
                         """,
-                importFormatPreferences, fileMonitor);
-
-        BibEntry expected = new BibEntry();
-        expected.setType(StandardEntryType.Article);
-        expected.setCitationKey("canh05");
-        expected.setField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.");
-        expected.setField(StandardField.TITLE, "Title A");
-
+                importFormatPreferences);
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("canh05")
+                .withField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.")
+                .withField(StandardField.TITLE, "Title A");
         assertEquals(Optional.of(expected), parsed);
     }
 
@@ -142,23 +139,20 @@ class BibtexParserTest {
                         @article{canh05, author = {Crowston, K. and Annabi, H.},
                             title = {Title A}}
                         @inProceedings{foo,  author={Norton Bar}}""",
-                importFormatPreferences, fileMonitor);
-
+                importFormatPreferences);
         assertTrue(parsed.get().getCitationKey().equals(Optional.of("canh05"))
                 || parsed.get().getCitationKey().equals(Optional.of("foo")));
     }
 
     @Test
     void singleFromStringReturnsEmptyFromEmptyString() throws ParseException {
-        Optional<BibEntry> parsed = BibtexParser.singleFromString("", importFormatPreferences, fileMonitor);
-
+        Optional<BibEntry> parsed = BibtexParser.singleFromString("", importFormatPreferences);
         assertEquals(Optional.empty(), parsed);
     }
 
     @Test
     void singleFromStringReturnsEmptyIfNoEntryRecognized() throws ParseException {
-        Optional<BibEntry> parsed = BibtexParser.singleFromString("@@article@@{{{{{{}", importFormatPreferences, fileMonitor);
-
+        Optional<BibEntry> parsed = BibtexParser.singleFromString("@@article@@{{{{{{}", importFormatPreferences);
         assertEquals(Optional.empty(), parsed);
     }
 
@@ -166,132 +160,89 @@ class BibtexParserTest {
     void parseRecognizesEntry() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author={Ed von Test}}"));
-
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
-    void parseQuotedEntries() throws IOException {
+    void parseRecognizesFieldValuesInQuotationMarks() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author=\"Ed von Test\"}"));
-
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryOnlyWithKey() throws IOException {
         ParserResult result = parser.parse(new StringReader("@article{test}"));
-
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
-    void parseRecognizesEntryWithWhitespaceAtBegining() throws IOException {
+    void parseRecognizesEntryWithWhitespaceAtBeginning() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader(" @article{test,author={Ed von Test}}"));
-
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withUserComments(" ")
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryWithWhitespace() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article { test,author={Ed von Test}}"));
-
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryWithNewlines() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article\n{\ntest,author={Ed von Test}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryWithUnknownType() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@unknown{test,author={Ed von Test}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(new UnknownEntryType("unknown"), entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(new UnknownEntryType("unknown"))
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryWithVeryLongType() throws IOException {
         ParserResult result = parser.parse(
                 new StringReader("@thisIsALongStringToTestMaybeItIsToLongWhoKnowsNOTme{test,author={Ed von Test}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(new UnknownEntryType("thisisalongstringtotestmaybeitistolongwhoknowsnotme"), entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(new UnknownEntryType("thisisalongstringtotestmaybeitistolongwhoknowsnotme"))
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryInParenthesis() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article(test,author={Ed von Test})"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -301,57 +252,42 @@ class BibtexParserTest {
                 isbn2 = {1234567890123456789},
                 small = 1234,
                 }"""));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("canh05"), entry.getCitationKey());
-        assertEquals(Optional.of("1234567890123456789"), entry.getField(StandardField.ISBN));
-        assertEquals(Optional.of("1234567890123456789"), entry.getField(new UnknownField("isbn2")));
-        assertEquals(Optional.of("1234"), entry.getField(new UnknownField("small")));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("canh05")
+                .withField(StandardField.ISBN, "1234567890123456789")
+                .withField(new UnknownField("isbn2"), "1234567890123456789")
+                .withField(new UnknownField("small"), "1234");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesCitationKeyWithSpecialCharacters() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{te_st:with-special(characters),author={Ed von Test}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("te_st:with-special(characters)"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("te_st:with-special(characters)")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryWhereLastFieldIsFinishedWithComma() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author={Ed von Test},}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesEntryWithAtInField() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author={Ed von T@st}}"));
-
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-
-        BibEntry expected = new BibEntry(StandardEntryType.Article).withField(InternalField.KEY_FIELD, "test")
-                                                                   .withField(StandardField.AUTHOR, "Ed von T@st");
-
-        assertEquals(List.of(expected), parsed);
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withField(InternalField.KEY_FIELD, "test")
+                .withField(StandardField.AUTHOR, "Ed von T@st");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -368,33 +304,25 @@ class BibtexParserTest {
         List<BibEntry> parsed = result.getDatabase().getEntries();
 
         assertEquals(List.of(expected), parsed);
-        assertEquals(expected.getUserComments(), parsed.get(0).getUserComments());
+        assertEquals(expected.getUserComments(), parsed.getFirst().getUserComments());
     }
 
     @Test
     void parseRecognizesMultipleEntries() throws IOException {
-        List<BibEntry> expected = new ArrayList<>();
-        BibEntry firstEntry = new BibEntry();
-        firstEntry.setType(StandardEntryType.Article);
-        firstEntry.setCitationKey("canh05");
-        firstEntry.setField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.");
-        firstEntry.setField(StandardField.TITLE, "Title A");
-        expected.add(firstEntry);
-
-        BibEntry secondEntry = new BibEntry();
-        secondEntry.setType(StandardEntryType.InProceedings);
-        secondEntry.setCitationKey("foo");
-        secondEntry.setField(StandardField.AUTHOR, "Norton Bar");
-        expected.add(secondEntry);
-
         ParserResult result = parser.parse(
                 new StringReader("""
                         @article{canh05,  author = {Crowston, K. and Annabi, H.},
                           title = {Title A}}
                         @inProceedings{foo,  author={Norton Bar}}"""));
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-
-        assertEquals(expected, parsed);
+        List<BibEntry> expected = List.of(
+                new BibEntry(StandardEntryType.Article)
+                        .withCitationKey("canh05")
+                        .withField(StandardField.AUTHOR, "Crowston, K. and Annabi, H.")
+                        .withField(StandardField.TITLE, "Title A"),
+                new BibEntry(StandardEntryType.InProceedings)
+                        .withCitationKey("foo")
+                        .withField(StandardField.AUTHOR, "Norton Bar"));
+        assertEquals(expected, result.getDatabase().getEntries());
     }
 
     @Test
@@ -402,82 +330,52 @@ class BibtexParserTest {
         String firstEntry = "@article{canh05," + "  author = {Crowston, K. and Annabi, H.}," + OS.NEWLINE
                 + "  title = {Title A}}" + OS.NEWLINE;
         String secondEntry = "@inProceedings{foo," + "  author={Norton Bar}}";
-
-        ParserResult result = parser
-                .parse(new StringReader(firstEntry + secondEntry));
-
-        for (BibEntry entry : result.getDatabase().getEntries()) {
-            if (entry.getCitationKey().equals(Optional.of("canh05"))) {
-                assertEquals(firstEntry, entry.getParsedSerialization());
-            } else {
-                assertEquals(secondEntry, entry.getParsedSerialization());
-            }
-        }
+        List<BibEntry> parsedEntries = parser.parse(new StringReader(firstEntry + secondEntry))
+                                             .getDatabase().getEntries();
+        assertEquals(firstEntry, parsedEntries.getFirst().getParsedSerialization());
+        assertEquals(secondEntry, parsedEntries.get(1).getParsedSerialization());
     }
 
     @Test
     void parseRecognizesMultipleEntriesOnSameLine() throws IOException {
-        List<BibEntry> expected = new ArrayList<>();
-        BibEntry firstEntry = new BibEntry();
-        firstEntry.setType(StandardEntryType.Article);
-        firstEntry.setCitationKey("canh05");
-        expected.add(firstEntry);
-
-        BibEntry secondEntry = new BibEntry();
-        secondEntry.setType(StandardEntryType.InProceedings);
-        secondEntry.setCitationKey("foo");
-        expected.add(secondEntry);
-
         ParserResult result = parser
                 .parse(new StringReader("@article{canh05}" + "@inProceedings{foo}"));
-        List<BibEntry> parsed = result.getDatabase().getEntries();
-
-        assertEquals(expected, parsed);
+        List<BibEntry> expected = List.of(
+                new BibEntry(StandardEntryType.Article)
+                        .withCitationKey("canh05"),
+                new BibEntry(StandardEntryType.InProceedings)
+                        .withCitationKey("foo"));
+        assertEquals(expected, result.getDatabase().getEntries());
     }
 
     @Test
     void parseCombinesMultipleAuthorFields() throws IOException {
         ParserResult result = parser.parse(
                 new StringReader("@article{test,author={Ed von Test},author={Second Author},author={Third Author}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test and Second Author and Third Author"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test and Second Author and Third Author");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseCombinesMultipleEditorFields() throws IOException {
         ParserResult result = parser.parse(
                 new StringReader("@article{test,editor={Ed von Test},editor={Second Author},editor={Third Author}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test and Second Author and Third Author"), entry.getField(StandardField.EDITOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.EDITOR, "Ed von Test and Second Author and Third Author");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseCombinesMultipleKeywordsFields() throws IOException {
         ParserResult result = parser.parse(
                 new StringReader("@article{test,Keywords={Test},Keywords={Second Keyword},Keywords={Third Keyword}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Test, Second Keyword, Third Keyword"), entry.getField(StandardField.KEYWORDS));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.KEYWORDS, "Test, Second Keyword, Third Keyword");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -529,97 +427,82 @@ class BibtexParserTest {
                           url = {http://james.howison.name/publications.html}
                         }))"""));
 
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
+        BibEntry expected = new BibEntry(StandardEntryType.InProceedings)
+                .withCitationKey("CroAnnHow05")
+                .withField(StandardField.AUTHOR, "Crowston, K. and Annabi, H. and Howison, J. and Masango, C.")
+                .withField(StandardField.TITLE, "Effective work practices for floss development: A model and propositions")
+                .withField(StandardField.BOOKTITLE, "Hawaii International Conference On System Sciences (HICSS)")
+                .withField(StandardField.YEAR, "2005")
+                .withField(StandardField.OWNER, "oezbek")
+                .withField(StandardField.TIMESTAMP, "2006.05.29")
+                .withField(StandardField.URL, "http://james.howison.name/publications.html");
 
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.InProceedings, entry.getType());
-        assertEquals(8, entry.getFields().size());
-        assertEquals(Optional.of("CroAnnHow05"), entry.getCitationKey());
-        assertEquals(Optional.of("Crowston, K. and Annabi, H. and Howison, J. and Masango, C."), entry.getField(StandardField.AUTHOR));
-        assertEquals(Optional.of("Effective work practices for floss development: A model and propositions"),
-                entry.getField(StandardField.TITLE));
-        assertEquals(Optional.of("Hawaii International Conference On System Sciences (HICSS)"),
-                entry.getField(StandardField.BOOKTITLE));
-        assertEquals(Optional.of("2005"), entry.getField(StandardField.YEAR));
-        assertEquals(Optional.of("oezbek"), entry.getField(StandardField.OWNER));
-        assertEquals(Optional.of("2006.05.29"), entry.getField(StandardField.TIMESTAMP));
-        assertEquals(Optional.of("http://james.howison.name/publications.html"), entry.getField(StandardField.URL));
-    }
-
-    @Test
-    void parseRecognizesFieldValuesInQuotationMarks() throws IOException {
-        ParserResult result = parser
-                .parse(new StringReader("@article{test,author=\"Ed von Test\"}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesNumbersWithoutBracketsOrQuotationMarks() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,year = 2005}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("2005"), entry.getField(StandardField.YEAR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.YEAR, "2005");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesUppercaseFields() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,AUTHOR={Ed von Test}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), entry.getField(StandardField.AUTHOR));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseRecognizesAbsoluteFile() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,file = {D:\\Documents\\literature\\Tansel-PRL2006.pdf}}"));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.FILE, "D:\\Documents\\literature\\Tansel-PRL2006.pdf");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
+    }
 
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
+    @Test
+    void parseRecognizesFinalSlashAsSlash() throws Exception {
+        ParserResult result = parser
+                .parse(new StringReader("""
+                        @misc{,
+                          test = {wired\\},
+                        }
+                        """));
+        assertEquals(
+                List.of(new BibEntry()
+                        .withField(new UnknownField("test"), "wired\\")),
+                result.getDatabase().getEntries()
+        );
+    }
 
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("D:\\Documents\\literature\\Tansel-PRL2006.pdf"), entry.getField(StandardField.FILE));
+    /**
+     * JabRef's heuristics is not able to parse this special case.
+     */
+    @Test
+    void parseFailsWithFinalSlashAsSlashWhenSingleLine() throws Exception {
+        ParserResult parserResult = parser.parse(new StringReader("@misc{, test = {wired\\}}"));
+        // In case JabRef was more relaxed, `assertFalse` would be provided here.
+        assertTrue(parserResult.hasWarnings());
     }
 
     @Test
     void parseRecognizesDateFieldWithConcatenation() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,date = {1-4~} # nov}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("1-4~#nov#"), entry.getField(StandardField.DATE));
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.DATE, "1-4~#nov#");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -634,10 +517,8 @@ class BibtexParserTest {
                           timestamp = {2006.05.29},
                           url = {http://james.howison.name/publications.html}
                         }))"""));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-
-        assertEquals(0, parsed.size());
+        assertTrue(result.hasWarnings());
+        assertEquals(List.of(), result.getDatabase().getEntries());
     }
 
     @Test
@@ -647,50 +528,37 @@ class BibtexParserTest {
                         This was created with JabRef 2.1 beta 2.
                         Encoding: Cp1252
                         """));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-
-        assertEquals(0, parsed.size());
+        assertEquals(List.of(), result.getDatabase().getEntries());
     }
 
     @Test
     void parseNotWarnsAboutEntryWithoutCitationKey() throws IOException {
-        BibEntry expected = new BibEntry();
-        expected.setField(StandardField.AUTHOR, "Ed von Test");
-        expected.setType(StandardEntryType.Article);
-
         ParserResult result = parser
                 .parse(new StringReader("@article{,author={Ed von Test}}"));
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-
         assertFalse(result.hasWarnings());
-        assertEquals(List.of(expected), parsed);
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withField(StandardField.AUTHOR, "Ed von Test");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
     void parseIgnoresAndWarnsAboutEntryWithUnmatchedOpenBracket() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author={author missing bracket}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-
-        assertEquals(0, parsed.size());
         assertTrue(result.hasWarnings());
+        assertEquals(List.of(), result.getDatabase().getEntries());
     }
 
     @Test
     void parseAddsEscapedOpenBracketToFieldValue() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,review={escaped \\{ bracket}}"));
-
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
-
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(Optional.of("escaped \\{ bracket"), entry.getField(StandardField.REVIEW));
         assertFalse(result.hasWarnings());
+
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.REVIEW, "escaped \\{ bracket");
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -698,14 +566,11 @@ class BibtexParserTest {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,review={escaped \\} bracket}}"));
 
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.REVIEW, "escaped \\} bracket");
 
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(Optional.of("escaped \\} bracket"), entry.getField(StandardField.REVIEW));
-        assertFalse(result.hasWarnings());
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -720,7 +585,7 @@ class BibtexParserTest {
     }
 
     @Test
-    void parseIgnoresArbitraryContentAfterEntry() throws IOException {
+    void parseMovesArbitraryContentAfterEntryToEpilog() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author={author bracket }}}"));
 
@@ -736,7 +601,7 @@ class BibtexParserTest {
 
         List<BibEntry> entries = result.getDatabase().getEntries();
 
-        assertEquals(Optional.of("author bracket #too##much#"), entries.get(0).getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("author bracket #too##much#"), entries.getFirst().getField(StandardField.AUTHOR));
     }
 
     @Test
@@ -757,7 +622,7 @@ class BibtexParserTest {
         List<BibEntry> entries = result.getDatabase().getEntries();
 
         assertEquals(1, entries.size());
-        assertEquals(Optional.of("author @ good"), entries.get(0).getField(StandardField.AUTHOR));
+        assertEquals(Optional.of("author @ good"), entries.getFirst().getField(StandardField.AUTHOR));
     }
 
     @Test
@@ -765,14 +630,11 @@ class BibtexParserTest {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author=\"author @ good\"}"));
 
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "author @ good");
 
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("author @ good"), entry.getField(StandardField.AUTHOR));
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -780,14 +642,11 @@ class BibtexParserTest {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author=\"Test {Ed {von} Test}\"}"));
 
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Test {Ed {von} Test}");
 
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Test {Ed {von} Test}"), entry.getField(StandardField.AUTHOR));
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -796,14 +655,11 @@ class BibtexParserTest {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author=\"Test {\" Test}\"}"));
 
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-        BibEntry entry = parsed.iterator().next();
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, "Test {\" Test}");
 
-        assertEquals(1, parsed.size());
-        assertEquals(StandardEntryType.Article, entry.getType());
-        assertEquals(Optional.of("test"), entry.getCitationKey());
-        assertEquals(2, entry.getFields().size());
-        assertEquals(Optional.of("Test {\" Test}"), entry.getField(StandardField.AUTHOR));
+        assertEquals(List.of(expected), result.getDatabase().getEntries());
     }
 
     @Test
@@ -811,9 +667,7 @@ class BibtexParserTest {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author={Ed von Test} year=2005}"));
 
-        Collection<BibEntry> parsed = result.getDatabase().getEntries();
-
-        assertEquals(0, parsed.size());
+        assertEquals(List.of(), result.getDatabase().getEntries());
         assertTrue(result.hasWarnings());
     }
 
@@ -903,6 +757,18 @@ class BibtexParserTest {
     }
 
     @Test
+    void parseRecognizesStringWithQuotes() throws IOException {
+        ParserResult result = parser
+                .parse(new StringReader("@string{bourdieu = \"Bourdieu, Pierre\"}"));
+
+        BibtexString string = result.getDatabase().getStringValues().iterator().next();
+
+        assertEquals(1, result.getDatabase().getStringCount());
+        assertEquals("bourdieu", string.getName());
+        assertEquals("Bourdieu, Pierre", string.getContent());
+    }
+
+    @Test
     void parseSavesOneNewlineAfterStringInParsedSerialization() throws IOException {
         String string = "@string{bourdieu = {Bourdieu, Pierre}}" + OS.NEWLINE;
         ParserResult result = parser
@@ -947,7 +813,7 @@ class BibtexParserTest {
         BibtexString first = iterator.next();
         BibtexString second = iterator.next();
         // Sort them because we can't be sure about the order
-        if (first.getName().equals("adieu")) {
+        if ("adieu".equals(first.getName())) {
             BibtexString tmp = first;
             first = second;
             second = tmp;
@@ -963,7 +829,7 @@ class BibtexParserTest {
     @Test
     void parseRecognizesStringAndEntry() throws IOException {
         ParserResult result = parser.parse(
-                new StringReader("" + "@string{bourdieu = {Bourdieu, Pierre}}"
+                new StringReader("@string{bourdieu = {Bourdieu, Pierre}}"
                         + "@book{bourdieu-2002-questions-sociologie, " + "    Address = {Paris}," + "    Author = bourdieu,"
                         + "    Isbn = 2707318256," + "    Publisher = {Minuit}," + "    Title = {Questions de sociologie},"
                         + "    Year = 2002" + "}"));
@@ -1000,30 +866,28 @@ class BibtexParserTest {
         ParserResult result = parser
                 .parse(new StringReader("@comment{some text and \\latex}"));
 
-        assertEquals(0, result.getDatabase().getEntries().size());
+        assertEquals(List.of(), result.getDatabase().getEntries());
     }
 
+    // TODO: We should keep @comment if it is the only "thing" in the file
     @Test
-    void parseIgnoresUpercaseComments() throws IOException {
+    void parseIgnoresUppercaseComments() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@COMMENT{some text and \\latex}"));
-
-        assertEquals(0, result.getDatabase().getEntries().size());
+        assertFalse(result.hasWarnings()); // FIXME: We silently remove @COMMENT
+        assertEquals(List.of(), result.getDatabase().getEntries());
     }
 
     @Test
-    void parseIgnoresCommentsBeforeEntry() throws IOException {
+    void parseKeepsCommentsAsUserComments() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@comment{some text and \\latex}" + "@article{test,author={Ed von Test}}"));
 
-        Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
-        BibEntry parsedEntry = parsedEntries.iterator().next();
-
-        assertEquals(1, parsedEntries.size());
-        assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
-        assertEquals(2, parsedEntry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
+        assertEquals(List.of(new BibEntry(StandardEntryType.Article)
+                        .withCitationKey("test")
+                        .withField(StandardField.AUTHOR, "Ed von Test")
+                        .withUserComments("@comment{some text and \\latex}")),
+                result.getDatabase().getEntries());
     }
 
     @Test
@@ -1031,14 +895,11 @@ class BibtexParserTest {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,author={Ed von Test}}" + "@comment{some text and \\latex}"));
 
-        Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
-        BibEntry parsedEntry = parsedEntries.iterator().next();
-
-        assertEquals(1, parsedEntries.size());
-        assertEquals(StandardEntryType.Article, parsedEntry.getType());
-        assertEquals(Optional.of("test"), parsedEntry.getCitationKey());
-        assertEquals(2, parsedEntry.getFields().size());
-        assertEquals(Optional.of("Ed von Test"), parsedEntry.getField(StandardField.AUTHOR));
+        assertEquals(List.of(new BibEntry(StandardEntryType.Article)
+                        .withCitationKey("test")
+                        .withField(StandardField.AUTHOR, "Ed von Test")),
+                result.getDatabase().getEntries());
+        assertEquals("@comment{some text and \\latex}", result.getDatabase().getEpilog());
     }
 
     @Test
@@ -1080,58 +941,65 @@ class BibtexParserTest {
     }
 
     @Test
-    void parseConvertsNewlineToSpace() throws IOException {
+    void parsKeesNewlines() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,a = {a\nb}}"));
 
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("a")));
+        assertEquals(Optional.of("a\nb"), parsedEntry.getField(new UnknownField("a")));
     }
 
     @Test
-    void parseConvertsMultipleNewlinesToSpace() throws IOException {
+    void parsKeepsMultipleNewlines() throws IOException {
         ParserResult result = parser
-                .parse(new StringReader("@article{test,a = {a\n\nb}," + "b = {a\n \nb}," + "c = {a \n \n b}}"));
+                .parse(new StringReader("""
+                        @article{test,a = {a
+
+                        b},b = {a
+                        \s
+                        b},c = {a\s
+                        \s
+                         b}}"""));
 
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("a")));
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("b")));
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("c")));
+        assertEquals(Optional.of("a\n\nb"), parsedEntry.getField(new UnknownField("a")));
+        assertEquals(Optional.of("a\n \nb"), parsedEntry.getField(new UnknownField("b")));
+        assertEquals(Optional.of("a \n \n b"), parsedEntry.getField(new UnknownField("c")));
     }
 
     @Test
-    void parseConvertsTabToSpace() throws IOException {
+    void parseKeepsTabs() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,a = {a\tb}}"));
 
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("a")));
+        assertEquals(Optional.of("a\tb"), parsedEntry.getField(new UnknownField("a")));
     }
 
     @Test
-    void parseConvertsMultipleTabsToSpace() throws IOException {
+    void parsKeepsMultipleTabs() throws IOException {
         ParserResult result = parser
                 .parse(new StringReader("@article{test,a = {a\t\tb}," + "b = {a\t \tb}," + "c = {a \t \t b}}"));
 
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
 
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("a")));
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("b")));
-        assertEquals(Optional.of("a b"), parsedEntry.getField(new UnknownField("c")));
+        assertEquals(Optional.of("a\t\tb"), parsedEntry.getField(new UnknownField("a")));
+        assertEquals(Optional.of("a\t \tb"), parsedEntry.getField(new UnknownField("b")));
+        assertEquals(Optional.of("a \t \t b"), parsedEntry.getField(new UnknownField("c")));
     }
 
     @Test
     void parsePreservesMultipleSpacesInNonWrappableField() throws IOException {
-        when(importFormatPreferences.fieldContentFormatterPreferences().getNonWrappableFields())
-                .thenReturn(List.of(StandardField.FILE));
-        BibtexParser parser = new BibtexParser(importFormatPreferences, fileMonitor);
+        when(importFormatPreferences.fieldPreferences().getNonWrappableFields()).thenReturn(
+                FXCollections.observableArrayList(List.of(StandardField.FILE)));
+        BibtexParser parser = new BibtexParser(importFormatPreferences);
         ParserResult result = parser
                 .parse(new StringReader("@article{canh05,file = {ups  sala}}"));
 
@@ -1247,7 +1115,7 @@ class BibtexParserTest {
     void parseRemovesEncodingLineAndSeparatorInParsedSerialization() throws IOException {
         String testEntry = "@article{test,author={Ed von Test}}";
         ParserResult result = parser.parse(
-                new StringReader(SavePreferences.ENCODING_PREFIX + OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry));
+                new StringReader(SaveConfiguration.ENCODING_PREFIX + OS.NEWLINE + OS.NEWLINE + OS.NEWLINE + testEntry));
 
         Collection<BibEntry> parsedEntries = result.getDatabase().getEntries();
         BibEntry parsedEntry = parsedEntries.iterator().next();
@@ -1386,26 +1254,36 @@ class BibtexParserTest {
     @Test
     void parseRecognizesCRLFLineBreak() throws IOException {
         ParserResult result = parser.parse(
-                new StringReader("@InProceedings{6055279,\r\n" + "  Title                    = {Educational session 1},\r\n"
-                        + "  Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},\r\n"
-                        + "  Year                     = {2011},\r\n" + "  Month                    = {Sept},\r\n"
-                        + "  Pages                    = {1-7},\r\n"
-                        + "  Abstract                 = {Start of the above-titled section of the conference proceedings record.},\r\n"
-                        + "  DOI                      = {10.1109/CICC.2011.6055279},\r\n"
-                        + "  ISSN                     = {0886-5930}\r\n" + "}\r\n"));
+                new StringReader("""
+                        @InProceedings{6055279,\r
+                          Title                    = {Educational session 1},\r
+                          Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},\r
+                          Year                     = {2011},\r
+                          Month                    = {Sept},\r
+                          Pages                    = {1-7},\r
+                          Abstract                 = {Start of the above-titled section of the conference proceedings record.},\r
+                          DOI                      = {10.1109/CICC.2011.6055279},\r
+                          ISSN                     = {0886-5930}\r
+                        }\r
+                        """));
         assertEquals("\r\n", result.getDatabase().getNewLineSeparator());
     }
 
     @Test
     void parseRecognizesLFLineBreak() throws IOException {
         ParserResult result = parser.parse(
-                new StringReader("@InProceedings{6055279,\n" + "  Title                    = {Educational session 1},\n"
-                        + "  Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},\n"
-                        + "  Year                     = {2011},\n" + "  Month                    = {Sept},\n"
-                        + "  Pages                    = {1-7},\n"
-                        + "  Abstract                 = {Start of the above-titled section of the conference proceedings record.},\n"
-                        + "  DOI                      = {10.1109/CICC.2011.6055279},\n"
-                        + "  ISSN                     = {0886-5930}\n" + "}\n"));
+                new StringReader("""
+                        @InProceedings{6055279,
+                          Title                    = {Educational session 1},
+                          Booktitle                = {Custom Integrated Circuits Conference (CICC), 2011 IEEE},
+                          Year                     = {2011},
+                          Month                    = {Sept},
+                          Pages                    = {1-7},
+                          Abstract                 = {Start of the above-titled section of the conference proceedings record.},
+                          DOI                      = {10.1109/CICC.2011.6055279},
+                          ISSN                     = {0886-5930}
+                        }
+                        """));
         assertEquals("\n", result.getDatabase().getNewLineSeparator());
     }
 
@@ -1447,12 +1325,12 @@ class BibtexParserTest {
                 new StringReader(
                         "@Comment{jabref-meta: saveOrderConfig:specified;author;false;year;true;abstract;false;}"));
 
-        Optional<SaveOrderConfig> saveOrderConfig = result.getMetaData().getSaveOrderConfig();
+        Optional<SaveOrder> saveOrderConfig = result.getMetaData().getSaveOrder();
 
-        assertEquals(new SaveOrderConfig(SaveOrderConfig.OrderType.SPECIFIED, List.of(
-                new SaveOrderConfig.SortCriterion(StandardField.AUTHOR, false),
-                new SaveOrderConfig.SortCriterion(StandardField.YEAR, true),
-                new SaveOrderConfig.SortCriterion(StandardField.ABSTRACT, false))),
+        assertEquals(new SaveOrder(SaveOrder.OrderType.SPECIFIED, List.of(
+                        new SaveOrder.SortCriterion(StandardField.AUTHOR, false),
+                        new SaveOrder.SortCriterion(StandardField.YEAR, true),
+                        new SaveOrder.SortCriterion(StandardField.ABSTRACT, false))),
                 saveOrderConfig.get());
     }
 
@@ -1462,13 +1340,13 @@ class BibtexParserTest {
                 .parse(new StringReader("@comment{jabref-meta: keypattern_article:articleTest;}" + OS.NEWLINE
                         + "@comment{jabref-meta: keypatterndefault:test;}"));
 
-        GlobalCitationKeyPattern pattern = mock(GlobalCitationKeyPattern.class);
-        AbstractCitationKeyPattern bibtexKeyPattern = result.getMetaData().getCiteKeyPattern(pattern);
-        AbstractCitationKeyPattern expectedPattern = new DatabaseCitationKeyPattern(pattern);
-        expectedPattern.setDefaultValue("test");
-        expectedPattern.addCitationKeyPattern(StandardEntryType.Article, "articleTest");
+        GlobalCitationKeyPatterns pattern = mock(GlobalCitationKeyPatterns.class);
+        AbstractCitationKeyPatterns bibtexKeyPatterns = result.getMetaData().getCiteKeyPatterns(pattern);
+        AbstractCitationKeyPatterns expectedPatterns = new DatabaseCitationKeyPatterns(pattern);
+        expectedPatterns.setDefaultValue("test");
+        expectedPatterns.addCitationKeyPattern(StandardEntryType.Article, "articleTest");
 
-        assertEquals(expectedPattern, bibtexKeyPattern);
+        assertEquals(expectedPatterns, bibtexKeyPatterns);
     }
 
     @Test
@@ -1482,7 +1360,7 @@ class BibtexParserTest {
     }
 
     @Test
-    void integrationTestGroupTree() throws IOException, ParseException {
+    void integrationTestGroupTree() throws IOException {
         ParserResult result = parser.parse(new StringReader("""
                 @comment{jabref-meta: groupsversion:3;}
                 @comment{jabref-meta: groupstree:
@@ -1497,7 +1375,7 @@ class BibtexParserTest {
         assertEquals(3, root.getNumberOfChildren());
         assertEquals(
                 new RegexKeywordGroup("Fréchet", GroupHierarchyType.INDEPENDENT, StandardField.KEYWORDS, "FrechetSpace", false),
-                root.getChildren().get(0).getGroup());
+                root.getChildren().getFirst().getGroup());
         assertEquals(
                 new WordKeywordGroup("Invariant theory", GroupHierarchyType.INDEPENDENT, StandardField.KEYWORDS, "GIT", false, ',', false),
                 root.getChildren().get(1).getGroup());
@@ -1506,30 +1384,335 @@ class BibtexParserTest {
     }
 
     /**
+     * Checks that BibDesk Static Groups are available after parsing the library
+     */
+    @Test
+    void integrationTestBibDeskStaticGroup() throws Exception {
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Swain:2023aa,
+                    author = {Subhashree Swain and P. Shalima and K.V.P. Latha},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06758},
+                    month = {09},
+                    title = {Unravelling the Nuclear Dust Morphology of NGC 1365: A Two Phase Polar - RAT Model for the Ultraviolet to Infrared Spectral Energy Distribution},
+                    url = {https://arxiv.org/pdf/2309.06758.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06758.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06758}}
+
+                @article{Heyl:2023aa,
+                    author = {Johannes Heyl and Joshua Butterworth and Serena Viti},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06784},
+                    month = {09},
+                    title = {Understanding Molecular Abundances in Star-Forming Regions Using Interpretable Machine Learning},
+                    url = {https://arxiv.org/pdf/2309.06784.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06784.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06784}}
+
+                @comment{BibDesk Static Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>group name</key>
+                        <string>firstTestGroup</string>
+                        <key>keys</key>
+                        <string>Swain:2023aa,Heyl:2023aa</string>
+                    </dict>
+                    <dict>
+                        <key>group name</key>
+                        <string>secondTestGroup</string>
+                        <key>keys</key>
+                        <string>Swain:2023aa</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+                """));
+
+        GroupTreeNode root = result.getMetaData().getGroups().get();
+        assertEquals(new AllEntriesGroup("All entries"), root.getGroup());
+        assertEquals(Optional.of(BIB_DESK_ROOT_GROUP_NAME), root.getFirstChild().map(GroupTreeNode::getName));
+
+        ExplicitGroup firstTestGroupExpected = new ExplicitGroup("firstTestGroup", GroupHierarchyType.INDEPENDENT, ',');
+        firstTestGroupExpected.setExpanded(true);
+
+        assertEquals(Optional.of(firstTestGroupExpected), root.getFirstChild().flatMap(TreeNode::getFirstChild).map(GroupTreeNode::getGroup));
+
+        ExplicitGroup secondTestGroupExpected = new ExplicitGroup("secondTestGroup", GroupHierarchyType.INDEPENDENT, ',');
+        secondTestGroupExpected.setExpanded(true);
+        assertEquals(Optional.of(secondTestGroupExpected), root.getFirstChild().flatMap(TreeNode::getLastChild).map(GroupTreeNode::getGroup));
+
+        BibDatabase db = result.getDatabase();
+
+        assertEquals(List.of(root.getGroup(), firstTestGroupExpected), root.getContainingGroups(db.getEntries(), true).stream().map(GroupTreeNode::getGroup).toList());
+        assertEquals(List.of(root.getGroup(), firstTestGroupExpected), root.getContainingGroups(db.getEntryByCitationKey("Heyl:2023aa").stream().toList(), false).stream().map(GroupTreeNode::getGroup).toList());
+    }
+
+    /**
+     * Checks that BibDesk Smart Groups are available after parsing the library
+     */
+    @Test
+    @Disabled("Not yet supported")
+    void integrationTestBibDeskSmartGroup() throws Exception {
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Kraljic:2023aa,
+                    author = {Katarina Kraljic and Florent Renaud and Yohan Dubois and Christophe Pichon and Oscar Agertz and Eric Andersson and Julien Devriendt and Jonathan Freundlich and Sugata Kaviraj and Taysun Kimm and Garreth Martin and S{\\'e}bastien Peirani and {\\'A}lvaro Segovia Otero and Marta Volonteri and Sukyoung K. Yi},
+                    date-added = {2023-09-14 20:09:10 +0200},
+                    date-modified = {2023-09-14 20:09:10 +0200},
+                    eprint = {2309.06485},
+                    month = {09},
+                    title = {Emergence and cosmic evolution of the Kennicutt-Schmidt relation driven by interstellar turbulence},
+                    url = {https://arxiv.org/pdf/2309.06485.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06485.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06485}}
+
+                @article{Swain:2023aa,
+                    author = {Subhashree Swain and P. Shalima and K.V.P. Latha},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06758},
+                    month = {09},
+                    title = {Unravelling the Nuclear Dust Morphology of NGC 1365: A Two Phase Polar - RAT Model for the Ultraviolet to Infrared Spectral Energy Distribution},
+                    url = {https://arxiv.org/pdf/2309.06758.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06758.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06758}}
+
+                @article{Heyl:2023aa,
+                    author = {Johannes Heyl and Joshua Butterworth and Serena Viti},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06784},
+                    month = {09},
+                    title = {Understanding Molecular Abundances in Star-Forming Regions Using Interpretable Machine Learning},
+                    url = {https://arxiv.org/pdf/2309.06784.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06784.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06784}}
+
+                @comment{BibDesk Smart Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>conditions</key>
+                        <array>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>4</integer>
+                                <key>key</key>
+                                <string>BibTeX Type</string>
+                                <key>value</key>
+                                <string>article</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>2</integer>
+                                <key>key</key>
+                                <string>Title</string>
+                                <key>value</key>
+                                <string>the</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                        </array>
+                        <key>conjunction</key>
+                        <integer>0</integer>
+                        <key>group name</key>
+                        <string>article</string>
+                    </dict>
+                    <dict>
+                        <key>conditions</key>
+                        <array>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>3</integer>
+                                <key>key</key>
+                                <string>Author</string>
+                                <key>value</key>
+                                <string>Swain</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                        </array>
+                        <key>conjunction</key>
+                        <integer>0</integer>
+                        <key>group name</key>
+                        <string>Swain</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+                """));
+
+        GroupTreeNode root = result.getMetaData().getGroups().get();
+        assertEquals(new AllEntriesGroup("All entries"), root.getGroup());
+        assertEquals(2, root.getNumberOfChildren());
+        ExplicitGroup firstTestGroupExpected = new ExplicitGroup("article", GroupHierarchyType.INDEPENDENT, ',');
+        firstTestGroupExpected.setExpanded(false);
+        assertEquals(firstTestGroupExpected, root.getChildren().getFirst().getGroup());
+        ExplicitGroup secondTestGroupExpected = new ExplicitGroup("Swain", GroupHierarchyType.INDEPENDENT, ',');
+        secondTestGroupExpected.setExpanded(false);
+        assertEquals(secondTestGroupExpected, root.getChildren().get(1).getGroup());
+
+        BibDatabase db = result.getDatabase();
+        List<BibEntry> firstTestGroupEntriesExpected = new ArrayList<>();
+        firstTestGroupEntriesExpected.add(db.getEntryByCitationKey("Kraljic:2023aa").get());
+        firstTestGroupEntriesExpected.add(db.getEntryByCitationKey("Swain:2023aa").get());
+        assertTrue(root.getChildren().getFirst().getGroup().containsAll(firstTestGroupEntriesExpected));
+        assertFalse(root.getChildren().get(1).getGroup().contains(db.getEntryByCitationKey("Swain:2023aa").get()));
+    }
+
+    /**
+     * Checks that both BibDesk Static Groups and Smart Groups are available after parsing the library
+     */
+    @Test
+    @Disabled("Not yet supported")
+    void integrationTestBibDeskMultipleGroup() throws Exception {
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Kraljic:2023aa,
+                    author = {Katarina Kraljic and Florent Renaud and Yohan Dubois and Christophe Pichon and Oscar Agertz and Eric Andersson and Julien Devriendt and Jonathan Freundlich and Sugata Kaviraj and Taysun Kimm and Garreth Martin and S{\\'e}bastien Peirani and {\\'A}lvaro Segovia Otero and Marta Volonteri and Sukyoung K. Yi},
+                    date-added = {2023-09-14 20:09:10 +0200},
+                    date-modified = {2023-09-14 20:09:10 +0200},
+                    eprint = {2309.06485},
+                    month = {09},
+                    title = {Emergence and cosmic evolution of the Kennicutt-Schmidt relation driven by interstellar turbulence},
+                    url = {https://arxiv.org/pdf/2309.06485.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06485.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06485}}
+
+                @article{Swain:2023aa,
+                    author = {Subhashree Swain and P. Shalima and K.V.P. Latha},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06758},
+                    month = {09},
+                    title = {Unravelling the Nuclear Dust Morphology of NGC 1365: A Two Phase Polar - RAT Model for the Ultraviolet to Infrared Spectral Energy Distribution},
+                    url = {https://arxiv.org/pdf/2309.06758.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06758.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06758}}
+
+                @article{Heyl:2023aa,
+                    author = {Johannes Heyl and Joshua Butterworth and Serena Viti},
+                    date-added = {2023-09-14 20:09:08 +0200},
+                    date-modified = {2023-09-14 20:09:08 +0200},
+                    eprint = {2309.06784},
+                    month = {09},
+                    title = {Understanding Molecular Abundances in Star-Forming Regions Using Interpretable Machine Learning},
+                    url = {https://arxiv.org/pdf/2309.06784.pdf},
+                    year = {2023},
+                    bdsk-url-1 = {https://arxiv.org/pdf/2309.06784.pdf},
+                    bdsk-url-2 = {https://arxiv.org/abs/2309.06784}}
+
+                @comment{BibDesk Static Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>group name</key>
+                        <string>firstTestGroup</string>
+                        <key>keys</key>
+                        <string>Swain:2023aa,Heyl:2023aa</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+
+                @comment{BibDesk Smart Groups{
+                <?xml version="1.0" encoding="UTF-8"?>
+                <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+                <plist version="1.0">
+                <array>
+                    <dict>
+                        <key>conditions</key>
+                        <array>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>4</integer>
+                                <key>key</key>
+                                <string>BibTeX Type</string>
+                                <key>value</key>
+                                <string>article</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                            <dict>
+                                <key>comparison</key>
+                                <integer>2</integer>
+                                <key>key</key>
+                                <string>Title</string>
+                                <key>value</key>
+                                <string>the</string>
+                                <key>version</key>
+                                <string>1</string>
+                            </dict>
+                        </array>
+                        <key>conjunction</key>
+                        <integer>0</integer>
+                        <key>group name</key>
+                        <string>article</string>
+                    </dict>
+                </array>
+                </plist>
+                }}
+                """));
+
+        GroupTreeNode root = result.getMetaData().getGroups().get();
+        assertEquals(new AllEntriesGroup("All entries"), root.getGroup());
+        assertEquals(2, root.getNumberOfChildren());
+        ExplicitGroup firstTestGroupExpected = new ExplicitGroup("firstTestGroup", GroupHierarchyType.INDEPENDENT, ',');
+        firstTestGroupExpected.setExpanded(false);
+        assertEquals(firstTestGroupExpected, root.getChildren().getFirst().getGroup());
+        ExplicitGroup secondTestGroupExpected = new ExplicitGroup("article", GroupHierarchyType.INDEPENDENT, ',');
+        secondTestGroupExpected.setExpanded(false);
+        assertEquals(secondTestGroupExpected, root.getChildren().get(1).getGroup());
+
+        BibDatabase db = result.getDatabase();
+        assertTrue(root.getChildren().getFirst().getGroup().containsAll(db.getEntries()));
+        List<BibEntry> smartGroupEntriesExpected = new ArrayList<>();
+        smartGroupEntriesExpected.add(db.getEntryByCitationKey("Kraljic:2023aa").get());
+        smartGroupEntriesExpected.add(db.getEntryByCitationKey("Swain:2023aa").get());
+        assertTrue(root.getChildren().getFirst().getGroup().containsAll(smartGroupEntriesExpected));
+    }
+
+    /**
      * Checks that a TexGroup finally gets the required data, after parsing the library.
      */
     @Test
     void integrationTestTexGroup() throws Exception {
         ParserResult result = parser.parse(new StringReader(
-             "@comment{jabref-meta: grouping:" + OS.NEWLINE
-                     + "0 AllEntriesGroup:;" + OS.NEWLINE
-                     + "1 TexGroup:cited entries\\;0\\;paper.aux\\;1\\;0x8a8a8aff\\;\\;\\;;"
-                     + "}" + OS.NEWLINE
-           + "@Comment{jabref-meta: databaseType:biblatex;}" + OS.NEWLINE
-           + "@Comment{jabref-meta: fileDirectory:src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
-           + "@Comment{jabref-meta: fileDirectory-"
-                     + System.getProperty("user.name") + "-"
-                     + InetAddress.getLocalHost().getHostName()
-                     + ":src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
-           + "@Comment{jabref-meta: fileDirectoryLatex-"
-                     + System.getProperty("user.name") + "-"
-                     + InetAddress.getLocalHost().getHostName()
-                     + ":src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
+                "@comment{jabref-meta: grouping:" + OS.NEWLINE
+                        + "0 AllEntriesGroup:;" + OS.NEWLINE
+                        + "1 TexGroup:cited entries\\;0\\;paper.aux\\;1\\;0x8a8a8aff\\;\\;\\;;"
+                        + "}" + OS.NEWLINE
+                        + "@Comment{jabref-meta: databaseType:biblatex;}" + OS.NEWLINE
+                        + "@Comment{jabref-meta: fileDirectory:src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
+                        + "@Comment{jabref-meta: fileDirectory-"
+                        + System.getProperty("user.name") + "-"
+                        + InetAddress.getLocalHost().getHostName()
+                        + ":src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
+                        + "@Comment{jabref-meta: fileDirectoryLatex-"
+                        + System.getProperty("user.name") + "-"
+                        + InetAddress.getLocalHost().getHostName()
+                        + ":src/test/resources/org/jabref/model/groups;}" + OS.NEWLINE
         ));
 
         GroupTreeNode root = result.getMetaData().getGroups().get();
 
-        assertEquals(((TexGroup) root.getChildren().get(0).getGroup()).getFilePath(),
+        assertEquals(((TexGroup) root.getChildren().getFirst().getGroup()).getFilePath(),
                 Path.of("src/test/resources/org/jabref/model/groups/paper.aux"));
     }
 
@@ -1590,12 +1773,11 @@ class BibtexParserTest {
     @Test
     void parseRecognizesDatabaseID() throws Exception {
         String expectedDatabaseID = "q1w2e3r4t5z6";
-        StringBuilder sharedDatabaseFileContent = new StringBuilder()
-                .append("\\% DBID: ").append(expectedDatabaseID)
-                .append(OS.NEWLINE)
-                .append("@Article{a}");
+        String sharedDatabaseFileContent = "\\% DBID: " + expectedDatabaseID +
+                OS.NEWLINE +
+                "@Article{a}";
 
-        ParserResult parserResult = parser.parse(new StringReader(sharedDatabaseFileContent.toString()));
+        ParserResult parserResult = parser.parse(new StringReader(sharedDatabaseFileContent));
         String actualDatabaseID = parserResult.getDatabase().getSharedDatabaseID().get();
 
         assertEquals(expectedDatabaseID, actualDatabaseID);
@@ -1603,16 +1785,15 @@ class BibtexParserTest {
 
     @Test
     void parseDoesNotRecognizeDatabaseIDasUserComment() throws Exception {
-        StringBuilder sharedDatabaseFileContent = new StringBuilder()
-                .append("\\% Encoding: UTF-8").append(OS.NEWLINE)
-                .append("\\% DBID: q1w2e3r4t5z6").append(OS.NEWLINE)
-                .append("@Article{a}");
+        String sharedDatabaseFileContent = "\\% Encoding: UTF-8" + OS.NEWLINE +
+                "\\% DBID: q1w2e3r4t5z6" + OS.NEWLINE +
+                "@Article{a}";
 
-        ParserResult parserResult = parser.parse(new StringReader(sharedDatabaseFileContent.toString()));
+        ParserResult parserResult = parser.parse(new StringReader(sharedDatabaseFileContent));
         List<BibEntry> entries = parserResult.getDatabase().getEntries();
 
         assertEquals(1, entries.size());
-        assertEquals("", entries.get(0).getUserComments());
+        assertEquals("", entries.getFirst().getUserComments());
     }
 
     @Test
@@ -1620,11 +1801,34 @@ class BibtexParserTest {
         ParserResult result = parser.parse(
                 new StringReader("@comment{jabref-meta: fileDirectory:\\\\Literature\\\\;}"
                         + "@comment{jabref-meta: fileDirectory-defaultOwner-user:D:\\\\Documents;}"
-                         + "@comment{jabref-meta: fileDirectoryLatex-defaultOwner-user:D:\\\\Latex;}"));
+                        + "@comment{jabref-meta: fileDirectoryLatex-defaultOwner-user:D:\\\\Latex;}"));
 
         assertEquals("\\Literature\\", result.getMetaData().getDefaultFileDirectory().get());
         assertEquals("D:\\Documents", result.getMetaData().getUserFileDirectory("defaultOwner-user").get());
         assertEquals("D:\\Latex", result.getMetaData().getLatexFileDirectory("defaultOwner-user").get().toString());
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            // single backslash kept
+            "C:\\temp\\test",
+            "\\\\servername\\path\\to\\file",
+            "//servername/path/to/file",
+            "."})
+    void fileDirectoriesUnmodified(String directory) throws IOException {
+        ParserResult result = parser.parse(
+                new StringReader("@comment{jabref-meta: fileDirectory:" + directory + "}"));
+        assertEquals(directory, result.getMetaData().getDefaultFileDirectory().get());
+    }
+
+    @ParameterizedTest
+    @CsvSource({
+            "C:\\temp\\test, C:\\\\temp\\\\test",
+            "\\\\servername\\path\\to\\file, \\\\\\\\servername\\\\path\\\\to\\\\file"})
+    void fileDirectoryWithDoubleEscapeIsRead(String expected, String provided) throws IOException {
+        ParserResult result = parser.parse(
+                new StringReader("@comment{jabref-meta: fileDirectory: " + provided + "}"));
+        assertEquals(expected, result.getMetaData().getDefaultFileDirectory().get());
     }
 
     @Test
@@ -1703,13 +1907,12 @@ class BibtexParserTest {
 
     @Test
     void preserveEncodingPrefixInsideEntry() throws ParseException {
-        BibEntry expected = new BibEntry();
-        expected.setType(StandardEntryType.Article);
-        expected.setCitationKey("test");
-        expected.setField(StandardField.AUTHOR, SavePreferences.ENCODING_PREFIX);
+        BibEntry expected = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("test")
+                .withField(StandardField.AUTHOR, SaveConfiguration.ENCODING_PREFIX);
 
         List<BibEntry> parsed = parser
-                .parseEntries("@article{test,author={" + SavePreferences.ENCODING_PREFIX + "}}");
+                .parseEntries("@article{test,author={" + SaveConfiguration.ENCODING_PREFIX + "}}");
 
         assertEquals(List.of(expected), parsed);
     }
@@ -1826,6 +2029,13 @@ class BibtexParserTest {
 
     @Test
     void parseYearWithMonthString() throws Exception {
+        Optional<BibEntry> result = parser.parseSingleEntry("@ARTICLE{HipKro03, year = {2003}, month = feb }");
+
+        assertEquals(new Date(2003, 2), result.get().getPublicationDate().get());
+    }
+
+    @Test
+    void parseYearWithIllFormattedMonthString() throws Exception {
         Optional<BibEntry> result = parser.parseSingleEntry("@ARTICLE{HipKro03, year = {2003}, month = #FEB# }");
 
         assertEquals(new Date(2003, 2), result.get().getPublicationDate().get());
@@ -1926,13 +2136,14 @@ class BibtexParserTest {
 
     @Test
     void parseDuplicateKeywordsWithOnlyOneEntry() throws ParseException {
-        Optional<BibEntry> result = parser.parseSingleEntry("@Article{,\n"
-            + "Keywords={asdf,asdf,asdf},\n"
-            + "}\n"
-            + "");
+        Optional<BibEntry> result = parser.parseSingleEntry("""
+                @Article{,
+                Keywords={asdf,asdf,asdf},
+                }
+                """);
 
         BibEntry expectedEntry = new BibEntry(StandardEntryType.Article)
-            .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
+                .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
 
         assertEquals(Optional.of(expectedEntry), result);
     }
@@ -1940,22 +2151,79 @@ class BibtexParserTest {
     @Test
     void parseDuplicateKeywordsWithTwoEntries() throws Exception {
         BibEntry expectedEntryFirst = new BibEntry(StandardEntryType.Article)
-            .withField(StandardField.KEYWORDS, "bbb")
-            .withCitationKey("Test2017");
+                .withField(StandardField.KEYWORDS, "bbb")
+                .withCitationKey("Test2017");
 
         BibEntry expectedEntrySecond = new BibEntry(StandardEntryType.Article)
-            .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
+                .withField(StandardField.KEYWORDS, "asdf,asdf,asdf");
 
         String entries = """
-            @Article{Test2017,
-              keywords = {bbb},
-            }
+                @Article{Test2017,
+                  keywords = {bbb},
+                }
 
-            @Article{,
-              keywords = {asdf,asdf,asdf},
-            },
-            """;
+                @Article{,
+                  keywords = {asdf,asdf,asdf},
+                },
+                """;
         ParserResult result = parser.parse(new StringReader(entries));
         assertEquals(List.of(expectedEntryFirst, expectedEntrySecond), result.getDatabase().getEntries());
+    }
+
+    @Test
+    void parseBibDeskLinkedFiles() throws IOException {
+
+        BibEntry expectedEntry = new BibEntry(StandardEntryType.Article);
+        expectedEntry.withCitationKey("Kovakkuni:2023aa")
+                     .withField(StandardField.AUTHOR, "Navyasree Kovakkuni and Federico Lelli and Pierre-alain Duc and M{\\'e}d{\\'e}ric Boquien and Jonathan Braine and Elias Brinks and Vassilis Charmandaris and Francoise Combes and Jeremy Fensch and Ute Lisenfeld and Stacy McGaugh and J. Chris Mihos and Marcel. S. Pawlowski and Yves. Revaz and Peter. M. Weilbacher")
+                     .withField(new UnknownField("date-added"), "2023-09-14 20:09:12 +0200")
+                     .withField(new UnknownField("date-modified"), "2023-09-14 20:09:12 +0200")
+                     .withField(StandardField.EPRINT, "2309.06478")
+                     .withField(StandardField.MONTH, "09")
+                     .withField(StandardField.TITLE, "Molecular and Ionized Gas in Tidal Dwarf Galaxies: The Spatially Resolved Star-Formation Relation")
+                     .withField(StandardField.URL, "https://arxiv.org/pdf/2309.06478.pdf")
+                     .withField(StandardField.YEAR, "2023")
+                     .withField(new UnknownField("bdsk-url-1"), "https://arxiv.org/abs/2309.06478")
+                     .withField(StandardField.FILE, ":../../Downloads/2309.06478.pdf:");
+
+        ParserResult result = parser.parse(new StringReader("""
+                @article{Kovakkuni:2023aa,
+                    author = {Navyasree Kovakkuni and Federico Lelli and Pierre-alain Duc and M{\\'e}d{\\'e}ric Boquien and Jonathan Braine and Elias Brinks and Vassilis Charmandaris and Francoise Combes and Jeremy Fensch and Ute Lisenfeld and Stacy McGaugh and J. Chris Mihos and Marcel. S. Pawlowski and Yves. Revaz and Peter. M. Weilbacher},
+                    date-added = {2023-09-14 20:09:12 +0200},
+                    date-modified = {2023-09-14 20:09:12 +0200},
+                    eprint = {2309.06478},
+                    month = {09},
+                    title = {Molecular and Ionized Gas in Tidal Dwarf Galaxies: The Spatially Resolved Star-Formation Relation},
+                    url = {https://arxiv.org/pdf/2309.06478.pdf},
+                    year = {2023},
+                    bdsk-file-1 = {YnBsaXN0MDDSAQIDBFxyZWxhdGl2ZVBhdGhZYWxpYXNEYXRhXxAeLi4vLi4vRG93bmxvYWRzLzIzMDkuMDY0NzgucGRmTxEBUgAAAAABUgACAAAMTWFjaW50b3NoIEhEAAAAAAAAAAAAAAAAAAAA4O/yLkJEAAH/////DjIzMDkuMDY0NzgucGRmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAP/////hKRkeAAAAAAAAAAAAAgACAAAKIGN1AAAAAAAAAAAAAAAAAAlEb3dubG9hZHMAAAIAKy86VXNlcnM6Y2hyaXN0b3BoczpEb3dubG9hZHM6MjMwOS4wNjQ3OC5wZGYAAA4AHgAOADIAMwAwADkALgAwADYANAA3ADgALgBwAGQAZgAPABoADABNAGEAYwBpAG4AdABvAHMAaAAgAEgARAASAClVc2Vycy9jaHJpc3RvcGhzL0Rvd25sb2Fkcy8yMzA5LjA2NDc4LnBkZgAAEwABLwAAFQACABH//wAAAAgADQAaACQARQAAAAAAAAIBAAAAAAAAAAUAAAAAAAAAAAAAAAAAAAGb},
+                    bdsk-url-1 = {https://arxiv.org/abs/2309.06478}}
+                    }
+                """));
+        BibDatabase database = result.getDatabase();
+
+        assertEquals(Collections.singletonList(expectedEntry), database.getEntries());
+    }
+
+    @Test
+    void parseInvalidBibDeskFilesResultsInWarnings() throws IOException {
+        // the first entry is invalid base 64, the second entry is correct plist format but does not contain the key
+        String entries = """
+                @Article{Test2017,
+                    bdsk-file-1 = {////=},
+                }
+
+                @Article{Test2,
+                   bdsk-file-1 = {YnBsaXN0MDDUAQIDBAUGJCVYJHZlcnNpb25YJG9iamVjdHNZJGFyY2hpdmVyVCR0b3ASAAGGoKgHCBMUFRYaIVUkbnVsbNMJCgsMDxJXTlMua2V5c1pOUy5vYmplY3RzViRjbGFzc6INDoACgAOiEBGABIAFgAdccmVsYXRpdmVQYXRoWWFsaWFzRGF0YV8QVi4uLy4uLy4uL1BhcGVycy9Bc2hlaW0yMDA1IFRoZSBHZW9ncmFwaHkgb2YgSW5ub3ZhdGlvbiBSZWdpb25hbCBJbm5vdmF0aW9uIFN5c3RlbXMucGRm0hcLGBlXTlMuZGF0YU8RAkoAAAAAAkoAAgAADE1hY2ludG9zaCBIRAAAAAAAAAAAAAAAAAAAAM6T/wtIKwAAACI+9B9Bc2hlaW0yMDA1IFRoZSBHZW9nciMyMjQ4QzkucGRmAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIkjJw6jvRAAAAAAAAAAAAAMAAgAACSAAAAAAAAAAAAAAAAAAAAAGUGFwZXJzABAACAAAzpPw+wAAABEACAAAw6jhNAAAAAEAEAAiPvQAIjTXACHV2wAHw2AAAgBQTWFjaW50b3NoIEhEOlVzZXJzOgBpbGlwcGVydDoARG9jdW1lbnRzOgBQYXBlcnM6AEFzaGVpbTIwMDUgVGhlIEdlb2dyIzIyNDhDOS5wZGYADgCOAEYAQQBzAGgAZQBpAG0AMgAwADAANQAgAFQAaABlACAARwBlAG8AZwByAGEAcABoAHkAIABvAGYAIABJAG4AbgBvAHYAYQB0AGkAbwBuACAAUgBlAGcAaQBvAG4AYQBsACAASQBuAG4AbwB2AGEAdABpAG8AbgAgAFMAeQBzAHQAZQBtAHMALgBwAGQAZgAPABoADABNAGEAYwBpAG4AdABvAHMAaAAgAEgARAASAGZVc2Vycy9pbGlwcGVydC9Eb2N1bWVudHMvUGFwZXJzL0FzaGVpbTIwMDUgVGhlIEdlb2dyYXBoeSBvZiBJbm5vdmF0aW9uIFJlZ2lvbmFsIElubm92YXRpb24gU3lzdGVtcy5wZGYAEwABLwAAFQACAA///wAAgAbSGxwdHlokY2xhc3NuYW1lWCRjbGFzc2VzXU5TTXV0YWJsZURhdGGjHR8gVk5TRGF0YVhOU09iamVjdNIbHCIjXE5TRGljdGlvbmFyeaIiIF8QD05TS2V5ZWRBcmNoaXZlctEmJ1Ryb290gAEACAARABoAIwAtADIANwBAAEYATQBVAGAAZwBqAGwAbgBxAHMAdQB3AIQAjgDnAOwA9ANCA0QDSQNUA10DawNvA3YDfwOEA5EDlAOmA6kDrgAAAAAAAAIBAAAAAAAAACgAAAAAAAAAAAAAAAAAAAOw},
+                },
+                """;
+        ParserResult result = parser.parse(new StringReader(entries));
+
+        BibEntry firstEntry = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("Test2017");
+        BibEntry secondEntry = new BibEntry(StandardEntryType.Article)
+                .withCitationKey("Test2");
+
+        assertEquals(List.of(firstEntry, secondEntry), result.getDatabase().getEntries());
     }
 }
