@@ -5,37 +5,32 @@ import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-import org.jabref.logic.layout.LayoutFormatterPreferences;
+import org.jabref.architecture.AllowedToUseLogic;
+import org.jabref.logic.util.OS;
 import org.jabref.model.entry.BibEntry;
 import org.jabref.model.entry.field.StandardField;
-import org.jabref.model.util.FileHelper;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.io.TempDir;
-import org.mockito.Answers;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.junit.jupiter.params.ParameterizedTest;
+import org.junit.jupiter.params.provider.ValueSource;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotEquals;
 import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.mockito.Mockito.mock;
 
+@AllowedToUseLogic("uses OS from logic package")
 class FileUtilTest {
-    private static final Logger LOGGER = LoggerFactory.getLogger(FileUtilTest.class);
-
     private final Path nonExistingTestPath = Path.of("nonExistingTestPath");
     private Path existingTestFile;
     private Path otherExistingTestFile;
-    private LayoutFormatterPreferences layoutFormatterPreferences;
     private Path rootDir;
 
     @BeforeEach
@@ -51,7 +46,6 @@ class FileUtilTest {
         otherExistingTestFile = subDir.resolve("otherExistingTestFile.txt");
         Files.createFile(otherExistingTestFile);
         Files.write(otherExistingTestFile, "otherExistingTestFile.txt".getBytes(StandardCharsets.UTF_8), StandardOpenOption.APPEND);
-        layoutFormatterPreferences = mock(LayoutFormatterPreferences.class, Answers.RETURNS_DEEP_STUBS);
     }
 
     @Test
@@ -67,7 +61,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedFileNameDefaultFullTitle() {
+    void getLinkedFileNameDefaultFullTitle() {
         String fileNamePattern = "[citationkey] - [fulltitle]";
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
@@ -78,7 +72,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedFileNameDefaultWithLowercaseTitle() {
+    void getLinkedFileNameDefaultWithLowercaseTitle() {
         String fileNamePattern = "[citationkey] - [title:lower]";
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
@@ -89,7 +83,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedFileNameBibTeXKey() {
+    void getLinkedFileNameBibTeXKey() {
         String fileNamePattern = "[citationkey]";
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
@@ -100,7 +94,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedFileNameNoPattern() {
+    void getLinkedFileNameNoPattern() {
         String fileNamePattern = "";
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
@@ -110,7 +104,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetDefaultFileNameNoPatternNoBibTeXKey() {
+    void getDefaultFileNameNoPatternNoBibTeXKey() {
         String fileNamePattern = "";
         BibEntry entry = new BibEntry();
         entry.setField(StandardField.TITLE, "mytitle");
@@ -119,7 +113,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedFileNameGetKeyIfEmptyField() {
+    void getLinkedFileNameGetKeyIfEmptyField() {
         String fileNamePattern = "[title]";
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
@@ -128,7 +122,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedFileNameGetDefaultIfEmptyFieldNoKey() {
+    void getLinkedFileNameGetDefaultIfEmptyFieldNoKey() {
         String fileNamePattern = "[title]";
         BibEntry entry = new BibEntry();
 
@@ -136,7 +130,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedFileNameByYearAuthorFirstpage() {
+    void getLinkedFileNameByYearAuthorFirstpage() {
         String fileNamePattern = "[year]_[auth]_[firstpage]";
         BibEntry entry = new BibEntry();
         entry.setField(StandardField.AUTHOR, "O. Kitsune");
@@ -147,48 +141,48 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetFileExtensionSimpleFile() {
-        assertEquals("pdf", FileHelper.getFileExtension(Path.of("test.pdf")).get());
+    void getFileExtensionSimpleFile() {
+        assertEquals("pdf", FileUtil.getFileExtension(Path.of("test.pdf")).get());
     }
 
     @Test
-    void testGetFileExtensionMultipleDotsFile() {
-        assertEquals("pdf", FileHelper.getFileExtension(Path.of("te.st.PdF")).get());
+    void getFileExtensionMultipleDotsFile() {
+        assertEquals("pdf", FileUtil.getFileExtension(Path.of("te.st.PdF")).get());
     }
 
     @Test
-    void testGetFileExtensionNoExtensionFile() {
-        assertFalse(FileHelper.getFileExtension(Path.of("JustTextNotASingleDot")).isPresent());
+    void getFileExtensionNoExtensionFile() {
+        assertFalse(FileUtil.getFileExtension(Path.of("JustTextNotASingleDot")).isPresent());
     }
 
     @Test
-    void testGetFileExtensionNoExtension2File() {
-        assertFalse(FileHelper.getFileExtension(Path.of(".StartsWithADotIsNotAnExtension")).isPresent());
+    void getFileExtensionNoExtension2File() {
+        assertFalse(FileUtil.getFileExtension(Path.of(".StartsWithADotIsNotAnExtension")).isPresent());
     }
 
     @Test
     void getFileExtensionWithSimpleString() {
-        assertEquals("pdf", FileHelper.getFileExtension("test.pdf").get());
+        assertEquals("pdf", FileUtil.getFileExtension("test.pdf").get());
     }
 
     @Test
     void getFileExtensionTrimsAndReturnsInLowercase() {
-        assertEquals("pdf", FileHelper.getFileExtension("test.PdF  ").get());
+        assertEquals("pdf", FileUtil.getFileExtension("test.PdF  ").get());
     }
 
     @Test
     void getFileExtensionWithMultipleDotsString() {
-        assertEquals("pdf", FileHelper.getFileExtension("te.st.PdF  ").get());
+        assertEquals("pdf", FileUtil.getFileExtension("te.st.PdF  ").get());
     }
 
     @Test
     void getFileExtensionWithNoDotReturnsEmptyExtension() {
-        assertEquals(Optional.empty(), FileHelper.getFileExtension("JustTextNotASingleDot"));
+        assertEquals(Optional.empty(), FileUtil.getFileExtension("JustTextNotASingleDot"));
     }
 
     @Test
     void getFileExtensionWithDotAtStartReturnsEmptyExtension() {
-        assertEquals(Optional.empty(), FileHelper.getFileExtension(".StartsWithADotIsNotAnExtension"));
+        assertEquals(Optional.empty(), FileUtil.getFileExtension(".StartsWithADotIsNotAnExtension"));
     }
 
     @Test
@@ -203,61 +197,75 @@ class FileUtilTest {
 
     @Test
     void uniquePathSubstrings() {
-        String[] pathArr = {Path.of("C:/uniquefile.bib").toString(),
-                Path.of("C:/downloads/filename.bib").toString(), Path.of("C:/mypaper/bib/filename.bib").toString(),
-                Path.of("C:/external/mypaper/bib/filename.bib").toString(), ""};
-        String[] uniqArr = {Path.of("uniquefile.bib").toString(), Path.of("downloads/filename.bib").toString(),
-                Path.of("C:/mypaper/bib/filename.bib").toString(),
-                Path.of("external/mypaper/bib/filename.bib").toString(), ""};
-        List<String> paths = Arrays.asList(pathArr);
-        List<String> uniqPath = Arrays.asList(uniqArr);
+       List<String> paths = List.of("C:/uniquefile.bib",
+               "C:/downloads/filename.bib",
+               "C:/mypaper/bib/filename.bib",
+               "C:/external/mypaper/bib/filename.bib",
+               "");
+        List<String> uniqPath = List.of("uniquefile.bib",
+              "downloads/filename.bib",
+              "C:/mypaper/bib/filename.bib",
+              "external/mypaper/bib/filename.bib",
+              "");
 
         List<String> result = FileUtil.uniquePathSubstrings(paths);
         assertEquals(uniqPath, result);
     }
 
     @Test
-    void testCopyFileFromEmptySourcePathToEmptyDestinationPathWithOverrideExistFile() {
+    void uniquePathFragmentWithSameSuffix() {
+        List<String> dirs = List.of("/users/jabref/bibliography.bib", "/users/jabref/koppor-bibliograsphy.bib");
+        assertEquals(Optional.of("bibliography.bib"), FileUtil.getUniquePathFragment(dirs, Path.of("/users/jabref/bibliography.bib")));
+    }
+
+    @Test
+    void uniquePathFragmentWithSameSuffixAndLongerName() {
+        List<String> paths = List.of("/users/jabref/bibliography.bib", "/users/jabref/koppor-bibliography.bib");
+        assertEquals(Optional.of("koppor-bibliography.bib"), FileUtil.getUniquePathFragment(paths, Path.of("/users/jabref/koppor-bibliography.bib")));
+    }
+
+    @Test
+    void copyFileFromEmptySourcePathToEmptyDestinationPathWithOverrideExistFile() {
         assertFalse(FileUtil.copyFile(nonExistingTestPath, nonExistingTestPath, true));
     }
 
     @Test
-    void testCopyFileFromEmptySourcePathToEmptyDestinationPathWithoutOverrideExistFile() {
+    void copyFileFromEmptySourcePathToEmptyDestinationPathWithoutOverrideExistFile() {
         assertFalse(FileUtil.copyFile(nonExistingTestPath, nonExistingTestPath, false));
     }
 
     @Test
-    void testCopyFileFromEmptySourcePathToExistDestinationPathWithOverrideExistFile() {
+    void copyFileFromEmptySourcePathToExistDestinationPathWithOverrideExistFile() {
         assertFalse(FileUtil.copyFile(nonExistingTestPath, existingTestFile, true));
     }
 
     @Test
-    void testCopyFileFromEmptySourcePathToExistDestinationPathWithoutOverrideExistFile() {
+    void copyFileFromEmptySourcePathToExistDestinationPathWithoutOverrideExistFile() {
         assertFalse(FileUtil.copyFile(nonExistingTestPath, existingTestFile, false));
     }
 
     @Test
-    void testCopyFileFromExistSourcePathToExistDestinationPathWithOverrideExistFile() {
+    void copyFileFromExistSourcePathToExistDestinationPathWithOverrideExistFile() {
         assertTrue(FileUtil.copyFile(existingTestFile, existingTestFile, true));
     }
 
     @Test
-    void testCopyFileFromExistSourcePathToExistDestinationPathWithoutOverrideExistFile() {
+    void copyFileFromExistSourcePathToExistDestinationPathWithoutOverrideExistFile() {
         assertFalse(FileUtil.copyFile(existingTestFile, existingTestFile, false));
     }
 
     @Test
-    void testCopyFileFromExistSourcePathToOtherExistDestinationPathWithOverrideExistFile() {
+    void copyFileFromExistSourcePathToOtherExistDestinationPathWithOverrideExistFile() {
         assertTrue(FileUtil.copyFile(existingTestFile, otherExistingTestFile, true));
     }
 
     @Test
-    void testCopyFileFromExistSourcePathToOtherExistDestinationPathWithoutOverrideExistFile() {
+    void copyFileFromExistSourcePathToOtherExistDestinationPathWithoutOverrideExistFile() {
         assertFalse(FileUtil.copyFile(existingTestFile, otherExistingTestFile, false));
     }
 
     @Test
-    void testCopyFileSuccessfulWithOverrideExistFile() throws IOException {
+    void copyFileSuccessfulWithOverrideExistFile() throws IOException {
         Path subDir = rootDir.resolve("2");
         Files.createDirectory(subDir);
         Path temp = subDir.resolve("existingTestFile.txt");
@@ -267,7 +275,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testCopyFileSuccessfulWithoutOverrideExistFile() throws IOException {
+    void copyFileSuccessfulWithoutOverrideExistFile() throws IOException {
         Path subDir = rootDir.resolve("2");
         Files.createDirectory(subDir);
         Path temp = subDir.resolve("existingTestFile.txt");
@@ -301,7 +309,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedDirNameDefaultFullTitle() {
+    void getLinkedDirNameDefaultFullTitle() {
         String fileDirPattern = "PDF/[year]/[auth]/[citationkey] - [fulltitle]";
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
@@ -313,7 +321,7 @@ class FileUtilTest {
     }
 
     @Test
-    void testGetLinkedDirNamePatternEmpty() {
+    void getLinkedDirNamePatternEmpty() {
         BibEntry entry = new BibEntry();
         entry.setCitationKey("1234");
         entry.setField(StandardField.TITLE, "mytitle");
@@ -324,29 +332,104 @@ class FileUtilTest {
     }
 
     @Test
-    void testIsBibFile() throws IOException {
+    void isBibFile() throws IOException {
         Path bibFile = Files.createFile(rootDir.resolve("test.bib"));
 
         assertTrue(FileUtil.isBibFile(bibFile));
     }
 
     @Test
-    void testIsNotBibFile() throws IOException {
+    void isNotBibFile() throws IOException {
         Path bibFile = Files.createFile(rootDir.resolve("test.pdf"));
         assertFalse(FileUtil.isBibFile(bibFile));
     }
 
     @Test
-    void testFindinPath() {
-        Optional<Path> resultPath1 = FileUtil.find("existingTestFile.txt", rootDir);
+    void findinPath() {
+        Optional<Path> resultPath1 = FileUtil.findSingleFileRecursively("existingTestFile.txt", rootDir);
         assertEquals(resultPath1.get().toString(), existingTestFile.toString());
     }
 
     @Test
-    void testFindInListOfPath() {
+    void findInListOfPath() {
+        // due to the added workaround for old JabRef behavior as both path starts with the same name they are considered equal
         List<Path> paths = List.of(existingTestFile, otherExistingTestFile, rootDir);
-        List<Path> resultPaths = List.of(existingTestFile, existingTestFile);
-        List<Path> result = FileUtil.find("existingTestFile.txt", paths);
+        List<Path> resultPaths = List.of(existingTestFile);
+        List<Path> result = FileUtil.findListOfFiles("existingTestFile.txt", paths);
         assertEquals(resultPaths, result);
+    }
+
+    @Test
+    public void extractFileExtension() {
+        final String filePath = FileUtilTest.class.getResource("pdffile.pdf").getPath();
+        assertEquals(Optional.of("pdf"), FileUtil.getFileExtension(filePath));
+    }
+
+    @Test
+    public void fileExtensionFromUrl() {
+        final String filePath = "https://link.springer.com/content/pdf/10.1007%2Fs40955-018-0121-9.pdf";
+        assertEquals(Optional.of("pdf"), FileUtil.getFileExtension(filePath));
+    }
+
+    @Test
+    public void fileNameEmpty() {
+        Path path = Path.of("/");
+        assertEquals(Optional.of(path), FileUtil.find("", path));
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"*", "?", ">", "\""})
+    public void fileNameIllegal(String fileName) {
+        Path path = Path.of("/");
+        assertEquals(Optional.empty(), FileUtil.find(fileName, path));
+    }
+
+    @Test
+    public void findsFileInDirectory(@TempDir Path temp) throws Exception {
+        Path firstFilePath = temp.resolve("files");
+        Files.createDirectories(firstFilePath);
+        Path firstFile = Files.createFile(firstFilePath.resolve("test.pdf"));
+
+        assertEquals(Optional.of(firstFile), FileUtil.find("test.pdf", temp.resolve("files")));
+    }
+
+    @Test
+    public void findsFileStartingWithTheSameDirectory(@TempDir Path temp) throws Exception {
+        Path firstFilePath = temp.resolve("files");
+        Files.createDirectories(firstFilePath);
+        Path firstFile = Files.createFile(firstFilePath.resolve("test.pdf"));
+
+        assertEquals(Optional.of(firstFile), FileUtil.find("files/test.pdf", temp.resolve("files")));
+    }
+
+    @Test
+    public void doesNotFindsFileStartingWithTheSameDirectoryHasASubdirectory(@TempDir Path temp) throws Exception {
+        Path firstFilesPath = temp.resolve("files");
+        Path secondFilesPath = firstFilesPath.resolve("files");
+        Files.createDirectories(secondFilesPath);
+        Path testFile = secondFilesPath.resolve("test.pdf");
+        Files.createFile(testFile);
+        assertEquals(Optional.of(testFile.toAbsolutePath()), FileUtil.find("files/test.pdf", firstFilesPath));
+    }
+
+    public void testCTemp() {
+        String fileName = "c:\\temp.pdf";
+        if (OS.WINDOWS) {
+            assertFalse(FileUtil.detectBadFileName(fileName));
+        } else {
+            assertTrue(FileUtil.detectBadFileName(fileName));
+        }
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"/mnt/tmp/test.pdf"})
+    public void legalPaths(String fileName) {
+        assertFalse(FileUtil.detectBadFileName(fileName));
+    }
+
+    @ParameterizedTest
+    @ValueSource(strings = {"te{}mp.pdf"})
+    public void illegalPaths(String fileName) {
+        assertTrue(FileUtil.detectBadFileName(fileName));
     }
 }
